[아서] 5월 27일 완료

--- a/아서/5월23일~5월29일.md
+++ b/아서/5월23일~5월29일.md
@@ -34,7 +34,7 @@
 
 ## 5월 27일
 
-- [ ] 인증 with Spring, Spring MVC Config
-- [ ] 인증 공부하기
-- [ ] 페어프로그래밍 시작
-- [ ] 프론트 친구들(시지프, 쟈스민)과 친해지기
+- [x] 인증 with Spring, Spring MVC Config
+- [x] 인증 공부하기
+- [x] 페어프로그래밍 시작
+- [x] 프론트 친구들(시지프, 쟈스민)과 친해지기
