[아서] 5월 27일 계획 (#473)
* [아서] 5월 27일 계획

* [아서] 5월 27일 완료

--- a/아서/5월23일~5월29일.md
+++ b/아서/5월23일~5월29일.md
@@ -29,3 +29,12 @@
 - [x] 배포 수업 듣기
 - [x] 지하철 경로 피드백 정리
 - [x] 글쓰기 초안 작성
+
+
+
+## 5월 27일
+
+- [x] 인증 with Spring, Spring MVC Config
+- [x] 인증 공부하기
+- [x] 페어프로그래밍 시작
+- [x] 프론트 친구들(시지프, 쟈스민)과 친해지기
