--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -29,12 +29,11 @@
 
 # 5. 27.
 
-- [ ] 장바구니 협업 미션 소개 수업
-- [ ] 리액트에 타입스크립트 적용하기 문서 읽기
-- [ ] 장바구니 step2 피드백 오면 반영
-- [ ] 페이먼츠 step3 어떻게 할지 고민 🧐
-  - [ ] TS 적용만 할지?
-  - [ ] NPM 배포까지 해볼지? 고민 해보고
-  - [ ] 토~일 이틀간 step3 진행
-
+- [x] 장바구니 협업 미션 소개 수업
+- [x] 리액트에 타입스크립트 적용하기 문서 읽기
+- [x] 장바구니 step2 피드백 오면 반영
+- [x] 페이먼츠 step3 어떻게 할지 고민 🧐
+  - [x] TS 적용만 할지?
+  - [x] NPM 배포까지 해볼지? 고민 해보고
+  - [x] 토~일 이틀간 step3 진행
 
