[민초] 5월 27일 계획 (#477)
* [민초] 5월 27일 계획

* 수정

* 완료

--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -26,3 +26,14 @@
 - [x] 수업
 - [x] 미션 피드백 반영
 - [x] 테코톡 자막 작업
+
+# 5. 27.
+
+- [x] 장바구니 협업 미션 소개 수업
+- [x] 리액트에 타입스크립트 적용하기 문서 읽기
+- [x] 장바구니 step2 피드백 오면 반영
+- [x] 페이먼츠 step3 어떻게 할지 고민 🧐
+  - [x] TS 적용만 할지?
+  - [x] NPM 배포까지 해볼지? 고민 해보고
+  - [x] 토~일 이틀간 step3 진행
+
