[파랑] 5월27일 계획완료

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -36,6 +36,6 @@
 지하철 2단계 피드백이 방금 와서 좀 화나지만 새로운 미션도 파이팅해야지💪
 
 ### 5월 27일 (금)
-- [ ] 15시 스프링 스터디
-- [ ] 16시 30분 매트의 아고라
-- [ ] 장바구니 페어
+- [x] 15시 스프링 스터디
+- [x] 16시 30분 매트의 아고라
+- [x] 장바구니 페어
