--- a/티거/5월23일-5월29일.md
+++ b/티거/5월23일-5월29일.md
@@ -27,7 +27,7 @@
 
 ## 5월 27일 (금)
 
-- [ ] 10시 40분 강의 < 협업 미션 소개 >
-- [ ] 장바구니 2단계 리뷰 요청 🥕
-- [ ] 페이먼츠 3단계
-- [ ] 협업 장바구니 논의
+- [x] 10시 40분 강의 < 협업 미션 소개 >
+- [x] 장바구니 2단계 리뷰 요청 🥕
+- [x] 페이먼츠 3단계
+- [x] 협업 장바구니 논의
