--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -32,7 +32,7 @@
 
 ## 5월 27일
 
--  [ ] 코드리뷰스터디 과제 2/2
--  [ ] 근로 회의
--  [ ] 협업 미션 간이 회의
--  [ ] 테코톡 준비
+-  [x] 코드리뷰스터디 과제 2/2
+-  [x] 근로 회의
+-  [x] 협업 미션 간이 회의
+-  [x] 테코톡 준비
