[앨버] 5월 27일 계획 (#474)
* 220527 앨버 계획

* 220527 앨버계획완료

--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -28,3 +28,11 @@
   - [x] 예시 코드 작성하기
 - [x] 페이먼츠 미션 타입스크립트 변환 (2시간)
 - [x] 코드리뷰스터디 과제 1/2
+
+
+## 5월 27일
+
+-  [x] 코드리뷰스터디 과제 2/2
+-  [x] 근로 회의
+-  [x] 협업 미션 간이 회의
+-  [x] 테코톡 준비
