--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -22,3 +22,9 @@
 - [x] 사이드 프로젝트 세팅
 - [x] 사이드 유저관리기능 수정
 - [x] 장바구니 코드 보기
+
+### 5월 27일 (금)
+- [x] 오전 강의
+- [x] 알고리즘 2문제
+- [x] 페어
+- [x] 사이드 패키지 구조, 협업룰 회의
