[오리] 5월 30일 계획 완료

--- a/오리/5월30일~6월5일.md
+++ b/오리/5월30일~6월5일.md
@@ -1,7 +1,8 @@
 ### 5월 30일 (월)
-- [ ] 글쓰기 미션
-- [ ] 근로 회의
-- [ ] 미션 rest docs 적용
-- [ ] 미션 패스워드 암호화 적용
-- [ ] 미션 yml 암호화 적용
-- [ ] 미션 api 문서 정리
+- [x] 글쓰기 미션
+- [x] 근로 회의
+- [x] 미션 rest docs 적용
+- [x] 미션 패스워드 암호화 적용
+- [x] 미션 yml 암호화 적용
+- [x] 미션 api 문서 정리
+- [x] pr
