[파랑] 5월31일 계획

--- a/파랑/5월30일~6월5일.md
+++ b/파랑/5월30일~6월5일.md
@@ -7,3 +7,8 @@
 이것저것 할 게 산더미 같았던 하루. 
 내가 코틀린 2인자라는 소문이 제이슨한테까지 퍼져서 제이슨이 공식적으로 인정해벌였다. ~~이 모든 소문의 근원인 0️⃣ 한 대 씨게 때리고 싶다.~~
 코틀린 공부 열심히 해야겠다..
+
+### 5월 31일 (화)
+- [ ] 코틀린 워들 미션 마무리
+- [ ] 코틀린 블로그 글 쓰기
+- [ ] 장바구니 페어
