[오리] 5월 31일 계획

--- a/오리/5월30일~6월5일.md
+++ b/오리/5월30일~6월5일.md
@@ -6,3 +6,11 @@
 - [x] 미션 yml 암호화 적용
 - [x] 미션 api 문서 정리
 - [x] pr
+
+### 5월 31일 (화)
+- [x] 요가 1시간
+- [ ] 오전 수업
+- [ ] 리뷰반영 pr
+- [ ] 사이드 시큐리티 걷어내기
+- [ ] 사이드 카테고리 기능 구현
+- [ ] 알고리즘 2문제
