--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -3,3 +3,13 @@
 - [x] 글쓰기 PR 보내기
 - [x] 장바구니 팀 회의
 - [x] 장바구니 페어프로그래밍
+
+
+
+
+
+## 5월 31일
+
+- [ ] 장바구니 페어프로그래밍
+- [ ] 비밀번호 암호화에 대한 고민
+- [ ] 토미 배포 수업 듣기
