feat: 코린 5월31일 계획 추가

--- a/코린/5월30일-6월5일.md
+++ b/코린/5월30일-6월5일.md
@@ -4,3 +4,10 @@
 - [x] 알고리즘 스터디
 - [x] 장바구니 페어프로그래밍
 - [x] 못푼 알고리즘 다시 풀어보기
+
+## 5월31일
+
+- [ ] 스프링 스터디
+- [ ] 장바구니 페어프로그래밍
+ - [ ] 회원 수정 기능 구현
+ - [ ] jwt 의존성 변경
