--- a/잉/5월30일~6월03일.md
+++ b/잉/5월30일~6월03일.md
@@ -3,3 +3,10 @@
 - [x] 학습근로 회의. 15:00~16:30
 - [x] 학습근로 페어링.19:00~21:00
 - [x] 스프링 스터디 발표 자료 만들기. 
+
+### 5월 31일 (화)
+- [ ] 장바구니 페어링.10:40~12:00 
+- [ ] 프론트와 점심만찬. 12:00~13:00  
+- [ ] 장바구니 페어링. 13:30~16:00
+- [ ] 스프링 스터디.16:00~17:00
+- [ ] 장바구니 페어링 18:00~ 
