[파랑] 5월31일 계획완료

--- a/파랑/5월30일~6월5일.md
+++ b/파랑/5월30일~6월5일.md
@@ -9,6 +9,6 @@
 코틀린 공부 열심히 해야겠다..
 
 ### 5월 31일 (화)
-- [ ] 코틀린 워들 미션 마무리
-- [ ] 코틀린 블로그 글 쓰기
-- [ ] 장바구니 페어
+- [x] 코틀린 워들 미션 마무리
+- [x] 코틀린 블로그 글 쓰기
+- [x] 장바구니 페어
