--- a/민초/5월30일-6월3일.md
+++ b/민초/5월30일-6월3일.md
@@ -6,10 +6,10 @@
 
 # 5. 31.
 
-- [ ] 수업
-- [ ] 장바구니 협업
-  - [ ] 로그인 페이지 구현
-  - [ ] 회원가입 페이지 구현
-  - [ ] 회원정보 수정 페이지 구현
-  - [ ] 인풋 컴포넌트 구현 & 스토리북 작성
-- [ ] 협업 회의
+- [x] 수업
+- [x] 장바구니 협업
+  - [x] 로그인 페이지 구현
+  - [x] 회원가입 페이지 구현
+  - [x] 회원정보 수정 페이지 구현
+  - [x] 인풋 컴포넌트 구현 & 스토리북 작성
+- [x] 협업 회의
