[민초] 5월 31일 계획 (#495)
* [민초] 5월 31일 계획

* 완료

--- a/민초/5월30일-6월3일.md
+++ b/민초/5월30일-6월3일.md
@@ -1,5 +1,15 @@
 # 5. 30.
 
-- [ ] 페이먼츠 step3
-- [ ] 면담
-- [ ] 장바구니 협업 미션
+- [x] 페이먼츠 step3
+- [x] 면담
+- [x] 장바구니 협업 미션
+
+# 5. 31.
+
+- [x] 수업
+- [x] 장바구니 협업
+  - [x] 로그인 페이지 구현
+  - [x] 회원가입 페이지 구현
+  - [x] 회원정보 수정 페이지 구현
+  - [x] 인풋 컴포넌트 구현 & 스토리북 작성
+- [x] 협업 회의
