--- a/코린/5월30일-6월5일.md
+++ b/코린/5월30일-6월5일.md
@@ -7,7 +7,7 @@
 
 ## 5월31일
 
-- [ ] 스프링 스터디
-- [ ] 장바구니 페어프로그래밍
- - [ ] 회원 수정 기능 구현
- - [ ] jwt 의존성 변경
+- [x] 스프링 스터디
+- [x] 장바구니 페어프로그래밍
+ - [x] 회원 수정 기능 구현
+ - [x] jwt 의존성 변경
