[아서] 5월 31일 완료

--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -10,6 +10,7 @@
 
 ## 5월 31일
 
-- [ ] 장바구니 페어프로그래밍
-- [ ] 비밀번호 암호화에 대한 고민
-- [ ] 토미 배포 수업 듣기
+- [x] 장바구니 페어프로그래밍
+- [x] 비밀번호 암호화에 대한 고민
+- [x] 토미 배포 수업 듣기
+
