[아서] 5월 31일 계획 (#491)
* [아서] 5월 31일 계획

* [아서] 5월 31일 완료

--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -3,3 +3,14 @@
 - [x] 글쓰기 PR 보내기
 - [x] 장바구니 팀 회의
 - [x] 장바구니 페어프로그래밍
+
+
+
+
+
+## 5월 31일
+
+- [x] 장바구니 페어프로그래밍
+- [x] 비밀번호 암호화에 대한 고민
+- [x] 토미 배포 수업 듣기
+
