5월 31일 에덴 계획 완료

--- a/에덴/5월30일-6월5일.md
+++ b/에덴/5월30일-6월5일.md
@@ -6,7 +6,7 @@
 
 ## 5월 31일
 
-- [ ] 스프링 스터디
-- [ ] 장바구니 페어 쭉쭉쭉
-  - [ ] 회원 수정
-  - [ ] jwt 의존성 변경
+- [x] 스프링 스터디
+- [x] 장바구니 페어 쭉쭉쭉
+  - [x] 회원 수정
+  - [x] jwt 의존성 변경
