[티거] 5월 31일 완료

--- a/티거/5월30일-6월5일.md
+++ b/티거/5월30일-6월5일.md
@@ -8,6 +8,6 @@
 
 ## 5월 31일 (화)
 
-- [ ] 10시 30분 강의 < TypeScript >
-- [ ] 페이먼츠 3단계 PR 코멘트 작성
-- [ ] 협업 장바구니
+- [x] 10시 30분 강의 < TypeScript >
+- [x] 페이먼츠 3단계 PR 코멘트 작성
+- [x] 협업 장바구니
