[티거] 5월 31일 계획 (#494)
협업 장바구니 미션을 시작했다
페어는 코이, 같은 팀 백엔드 크루는 라쿤, 판다, 기론, 티키, 엘리!
처음으로 오프라인에서 만나서 회의를 했는데 생각했던 것보다 더 재밌었다
저녁도 같이 먹었다
메뉴 정하는 데까지 너무 오래 걸리긴 했다...
결국 방이동까지 가서 삼겹살을 먹고 왔다
아무쪼록 크루들이랑 더 더 친해지고 싶다 ! ! ! ! !

협업 미션을 시작하니까 프론트 크루들이랑 많이 못 만난다
벌써 이렇게 된다니 너무 서운하다 ;ㅅ;
레벨 2 마지막까지 크루들이랑 좋은 기억 많이 만들고 싶다
프론트 못 잃어 . . . . .

--- a/티거/5월30일-6월5일.md
+++ b/티거/5월30일-6월5일.md
@@ -5,3 +5,9 @@
 - [x] 글쓰기 < 레벨 2 - 성장 >
 - [x] 페이먼츠 3단계
 - [x] 협업 장바구니
+
+## 5월 31일 (화)
+
+- [x] 10시 30분 강의 < TypeScript >
+- [x] 페이먼츠 3단계 PR 코멘트 작성
+- [x] 협업 장바구니
