220531 잉 일정 완료

--- a/잉/5월30일~6월03일.md
+++ b/잉/5월30일~6월03일.md
@@ -5,8 +5,8 @@
 - [x] 스프링 스터디 발표 자료 만들기. 
 
 ### 5월 31일 (화)
-- [ ] 장바구니 페어링.10:40~12:00 
-- [ ] 프론트와 점심만찬. 12:00~13:00  
-- [ ] 장바구니 페어링. 13:30~16:00
-- [ ] 스프링 스터디.16:00~17:00
-- [ ] 장바구니 페어링 18:00~ 
+- [x] 장바구니 페어링.10:40~12:00 
+- [x] 프론트와 점심만찬. 12:00~13:00  
+- [x] 장바구니 페어링. 13:30~16:00
+- [x] 스프링 스터디.16:00~17:00
+- [x] 장바구니 페어링 18:00~ 
