--- a/오리/5월30일~6월5일.md
+++ b/오리/5월30일~6월5일.md
@@ -14,3 +14,13 @@
 - [ ] 사이드 시큐리티 걷어내기
 - [ ] 사이드 카테고리 기능 구현
 - [ ] 알고리즘 2문제
+
+
+### 6월 2일 (목)
+- [ ] 백엔드 리뷰어 편집점
+- [ ] 프론트 리뷰어 질문지 작성
+- [ ] 프론트 리뷰이 인터뷰 가이드
+- [ ] 사이드1 인증 마무리
+- [ ] 사이드2 인증 리뷰
+- [ ] 사이드2 캠퍼스기능
+- [ ] 장바구니 api 추가 검토 및 적용
