[티거] 6월 2일 계획

--- a/티거/5월30일-6월5일.md
+++ b/티거/5월30일-6월5일.md
@@ -11,3 +11,10 @@
 - [x] 10시 30분 강의 < TypeScript >
 - [x] 페이먼츠 3단계 PR 코멘트 작성
 - [x] 협업 장바구니
+
+## 6월 2일 (목)
+
+- [ ] 협업 장바구니
+  - [ ] API mocking
+  - [ ] CSS
+  - [ ] 리팩토링
