--- a/코린/5월30일-6월5일.md
+++ b/코린/5월30일-6월5일.md
@@ -11,3 +11,10 @@
 - [x] 장바구니 페어프로그래밍
  - [x] 회원 수정 기능 구현
  - [x] jwt 의존성 변경
+
+## 6월2일
+
+- [ ] 알고리즘 스터디
+- [ ] 스프링 발표 자료 만들고 PR
+- [ ] 스프링5 chapter 10, 11 읽기
+- [ ] 회식~!
