[민초] 6월 2일 계획

--- a/민초/5월30일-6월3일.md
+++ b/민초/5월30일-6월3일.md
@@ -13,3 +13,10 @@
   - [x] 회원정보 수정 페이지 구현
   - [x] 인풋 컴포넌트 구현 & 스토리북 작성
 - [x] 협업 회의
+
+# 6. 2.
+
+- [ ] 장바구니 협업
+  - [ ] 상세페이지 연결 기능
+  - [ ] 리팩토링
+  - [ ] PR 제출
