6월 2일 에덴 계획

--- a/에덴/5월30일-6월5일.md
+++ b/에덴/5월30일-6월5일.md
@@ -10,3 +10,11 @@
 - [x] 장바구니 페어 쭉쭉쭉
   - [x] 회원 수정
   - [x] jwt 의존성 변경
+
+## 6월 2일
+
+- [ ] 알고리즘 스터디
+- [ ] 루키와 페어
+- [ ] PR 염탐
+  - [ ] 블로그 주제 찾기
+- [ ] 저녁 회식
