--- a/잉/5월30일~6월03일.md
+++ b/잉/5월30일~6월03일.md
@@ -10,3 +10,8 @@
 - [x] 장바구니 페어링. 13:30~16:00
 - [x] 스프링 스터디.16:00~17:00
 - [x] 장바구니 페어링 18:00~ 
+
+### 6월 2일 (목)
+- [ ] 장바구니 pr.
+- [ ] 스프링5 10장, 11장 읽기
+- [ ] 회식띵. 
