[아서] 6월 2일 완료

--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -18,10 +18,10 @@
 
 ## 6월 2일
 
-- [ ] 장바구니 PR 보내기
-- [ ] 프론트와 데일리 회의
-- [ ] 글쓰기 리뷰하기
-- [ ] 테코톡 듣기
-- [ ] 토큰 & 세션 정리하기
-- [ ] 암호화에 대해서 고민하기
+- [x] 장바구니 PR 보내기
+- [x] 프론트와 데일리 회의
+- [x] 글쓰기 리뷰하기
+- [x] 테코톡 듣기
+- [x] 토큰 & 세션 정리하기
+- [x] 암호화에 대해서 고민하기
 
