--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -14,3 +14,14 @@
 - [x] 비밀번호 암호화에 대한 고민
 - [x] 토미 배포 수업 듣기
 
+
+
+## 6월 2일
+
+- [x] 장바구니 PR 보내기
+- [x] 프론트와 데일리 회의
+- [x] 글쓰기 리뷰하기
+- [x] 테코톡 듣기
+- [x] 토큰 & 세션 정리하기
+- [x] 암호화에 대해서 고민하기
+
