[티거] 6월 2일 완료

--- a/티거/5월30일-6월5일.md
+++ b/티거/5월30일-6월5일.md
@@ -14,7 +14,7 @@
 
 ## 6월 2일 (목)
 
-- [ ] 협업 장바구니
-  - [ ] API mocking
-  - [ ] CSS
-  - [ ] 리팩토링
+- [x] 협업 장바구니
+  - [x] API mocking
+  - [x] CSS
+  - [x] 리팩토링
