--- a/민초/5월30일-6월3일.md
+++ b/민초/5월30일-6월3일.md
@@ -16,7 +16,7 @@
 
 # 6. 2.
 
-- [ ] 장바구니 협업
-  - [ ] 상세페이지 연결 기능
-  - [ ] 리팩토링
-  - [ ] PR 제출
+- [x] 장바구니 협업
+  - [x] 상세페이지 연결 기능
+  - [x] 리팩토링
+  - [x] PR 제출
