feat: 코린 계획 완료

--- a/코린/5월30일-6월5일.md
+++ b/코린/5월30일-6월5일.md
@@ -14,8 +14,8 @@
 
 ## 6월2일
 
-- [ ] 알고리즘 스터디
-- [ ] 앨버 테코톡 보기
-- [ ] 스프링 발표 자료 만들고 PR
-- [ ] 스프링5 chapter 10, 11 읽기
-- [ ] 회식~!
+- [x] 알고리즘 스터디
+- [x] 앨버 테코톡 보기
+- [x] 스프링 발표 자료 만들고 PR
+- [x] 스프링5 chapter 10, 11 읽기
+- [x] 회식~!
