[오리] 6월 2일 계획 완료

--- a/오리/5월30일~6월5일.md
+++ b/오리/5월30일~6월5일.md
@@ -17,10 +17,10 @@
 
 
 ### 6월 2일 (목)
-- [ ] 백엔드 리뷰어 편집점
-- [ ] 프론트 리뷰어 질문지 작성
-- [ ] 프론트 리뷰이 인터뷰 가이드
-- [ ] 사이드1 인증 마무리
-- [ ] 사이드2 인증 리뷰
-- [ ] 사이드2 캠퍼스기능
-- [ ] 장바구니 api 추가 검토 및 적용
+- [x] 백엔드 리뷰어 편집점
+- [x] 프론트 리뷰어 질문지 작성
+- [x] 프론트 리뷰이 인터뷰 가이드
+- [x] 사이드1 인증 마무리
+- [x] 사이드2 인증 리뷰
+- [x] 사이드2 캠퍼스기능
+- [x] 장바구니 api 추가 검토 및 적용
