6월 2일 에덴 계획 완료

--- a/에덴/5월30일-6월5일.md
+++ b/에덴/5월30일-6월5일.md
@@ -13,8 +13,8 @@
 
 ## 6월 2일
 
-- [ ] 알고리즘 스터디
-- [ ] 루키와 페어
-- [ ] PR 염탐
-  - [ ] 블로그 주제 찾기
-- [ ] 저녁 회식
+- [x] 알고리즘 스터디
+- [x] 루키와 페어
+- [x] PR 염탐
+  - [x] 블로그 주제 찾기
+- [x] 저녁 회식
