[파랑] 6월2일 계획 (#498)
* [파랑] 6월2일 계획

* [파랑] 6월2일 계획수정

--- a/파랑/5월30일~6월5일.md
+++ b/파랑/5월30일~6월5일.md
@@ -12,3 +12,10 @@
 - [x] 코틀린 워들 미션 마무리
 - [x] 코틀린 블로그 글 쓰기
 - [x] 장바구니 페어
+
+### 6월 2일 (목)
+- [ ] 장바구니 step1 PR
+- [ ] 장바구니 팀 회의
+- [ ] 15시 30분 근로 플래닝 포커
+- [ ] 제이슨과의 워들 페어 프로그래밍
+- [ ] 스프링 스터디 12-13장
