220602 잉 일정 완료

--- a/잉/5월30일~6월03일.md
+++ b/잉/5월30일~6월03일.md
@@ -12,6 +12,6 @@
 - [x] 장바구니 페어링 18:00~ 
 
 ### 6월 2일 (목)
-- [ ] 장바구니 pr.
-- [ ] 스프링5 10장, 11장 읽기
-- [ ] 회식띵. 
+- [x] 장바구니 pr.
+- [x] 스프링5 10장, 11장 읽기
+- [x] 회식띵. 
