[오리] 6월 3일 계획

--- a/오리/5월30일~6월5일.md
+++ b/오리/5월30일~6월5일.md
@@ -24,3 +24,9 @@
 - [x] 사이드2 인증 리뷰
 - [x] 사이드2 캠퍼스기능
 - [x] 장바구니 api 추가 검토 및 적용
+
+### 6월 3일 (금)
+- [ ] 오전 회고 + 강의
+- [ ] 장바구니 2단계
+- [ ] 프론트 리뷰어 인터뷰촬영
+- [ ] 영상팀 회식
