[파랑] 6월3일 계획

--- a/파랑/5월30일~6월5일.md
+++ b/파랑/5월30일~6월5일.md
@@ -14,8 +14,18 @@
 - [x] 장바구니 페어
 
 ### 6월 2일 (목)
-- [ ] 장바구니 step1 PR
-- [ ] 장바구니 팀 회의
-- [ ] 15시 30분 근로 플래닝 포커
-- [ ] 제이슨과의 워들 페어 프로그래밍
-- [ ] 스프링 스터디 12-13장
+- [x] 장바구니 step1 PR
+- [x] 장바구니 팀 회의
+- [x] 15시 30분 근로 플래닝 포커
+- [x] 제이슨과의 워들 페어 프로그래밍
+- [x] 스프링 스터디 12-13장
+---
+왜인지 나는 코치분들에게 먼저 다가가기가 조금 어려웠는데 이번에 제이슨이 먼저 워들 페어로 해보자고 제의해주셨다! 긴장반 기대반으로 페어를 하러 갔는데 웬걸 너무 재밌었다.
+솔직히 지금까지 제이슨을 좀 무서워하고 있었는데.. 오히려 좀 귀여우실지도?.. 7시까지 저녁도 못 먹고 페어한 덕에 제이슨과의 식사 쿠폰도 얻었다. 예~✌️ 정말 많이 배웠고 좋은 경험이었다. 언제 또 제이슨이랑 페어해보겠어?ㅎㅎ 담에 기회되면 또 하고싶다.
+
+### 6월 3일 (금)
+- [ ] 10시 장바구니 팀 회고
+- [ ] 스프링 스터디 14장
+- [ ] 15시 스프링 스터디
+- [ ] 17시 장바구니 팀 회의
+- [ ] 글쓰기 리뷰 3명
