--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -25,3 +25,13 @@
 - [x] 토큰 & 세션 정리하기
 - [x] 암호화에 대해서 고민하기
 
+
+
+## 6월 3일
+
+- [ ] 팀 중간 회고
+- [ ] 배포 인프라2 수업 듣기
+- [ ] 장바구니 코드 리팩토링
+  - [ ] 암호화 하는 비밀번호 객체화
+  - [ ] MockMVC 다양하게 사용해보기
+
