[티거] 6월 3일 계획

--- a/티거/5월30일-6월5일.md
+++ b/티거/5월30일-6월5일.md
@@ -18,3 +18,10 @@
   - [x] API mocking
   - [x] CSS
   - [x] 리팩토링
+
+## 6월 3일 (금)
+
+- [ ] 10시 협업 장바구니 회고
+- [ ] 협업 장바구니 1단계 PR 코멘트 작성
+- [ ] 10시 30분 강의 < 협업 중간 회고 >
+- [ ] 협업 장바구니 리팩토링
