--- a/아서/5월30일~6월5일.md
+++ b/아서/5월30일~6월5일.md
@@ -29,9 +29,9 @@
 
 ## 6월 3일
 
-- [ ] 팀 중간 회고
-- [ ] 배포 인프라2 수업 듣기
-- [ ] 장바구니 코드 리팩토링
-  - [ ] 암호화 하는 비밀번호 객체화
-  - [ ] MockMVC 다양하게 사용해보기
+- [x] 팀 중간 회고
+- [x] 배포 인프라2 수업 듣기
+- [x] 장바구니 코드 리팩토링
+  - [x] 암호화 하는 비밀번호 객체화
+  - [x] MockMVC 다양하게 사용해보기
 
