--- a/오리/5월30일~6월5일.md
+++ b/오리/5월30일~6월5일.md
@@ -26,7 +26,7 @@
 - [x] 장바구니 api 추가 검토 및 적용
 
 ### 6월 3일 (금)
-- [ ] 오전 회고 + 강의
-- [ ] 장바구니 2단계
-- [ ] 프론트 리뷰어 인터뷰촬영
-- [ ] 영상팀 회식
+- [x] 오전 회고 + 강의
+- [x] 장바구니 2단계
+- [x] 프론트 리뷰어 인터뷰촬영
+- [x] 영상팀 회식
