feat: 코린 6월3일 계획 완료

--- a/코린/5월30일-6월5일.md
+++ b/코린/5월30일-6월5일.md
@@ -22,8 +22,8 @@
 
 ## 6월3일
 
-- [ ] 배포 강의 듣기
-- [ ] CORS 공부하기
-- [ ] 장바구니 피드백 반영하기
-- [ ] 스프링 스터디
-- [ ] 비밀번호 암호화 책임에 대해 고민하기
+- [x] 배포 강의 듣기
+- [x] CORS 공부하기
+- [x] 장바구니 피드백 반영하기
+- [x] 스프링 스터디
+- [x] 비밀번호 암호화 책임에 대해 고민하기
