--- a/코린/5월30일-6월5일.md
+++ b/코린/5월30일-6월5일.md
@@ -19,3 +19,11 @@
 - [x] 스프링 발표 자료 만들고 PR
 - [x] 스프링5 chapter 10, 11 읽기
 - [x] 회식~!
+
+## 6월3일
+
+- [x] 배포 강의 듣기
+- [x] CORS 공부하기
+- [x] 장바구니 피드백 반영하기
+- [x] 스프링 스터디
+- [x] 비밀번호 암호화 책임에 대해 고민하기
