--- a/에덴/5월30일-6월5일.md
+++ b/에덴/5월30일-6월5일.md
@@ -21,7 +21,7 @@
 
 ## 6월 3일
 
-- [ ] 스프링 스터디
-- [ ] 브리 수업 듣기
-- [ ] 루키와 페어
-- [ ] 피드백오면 반영
+- [x] 스프링 스터디
+- [x] 브리 수업 듣기
+- [x] 루키와 페어
+- [x] 피드백오면 반영
