[파랑] 6월3일 계획완료

--- a/파랑/5월30일~6월5일.md
+++ b/파랑/5월30일~6월5일.md
@@ -24,8 +24,11 @@
 솔직히 지금까지 제이슨을 좀 무서워하고 있었는데.. 오히려 좀 귀여우실지도?.. 7시까지 저녁도 못 먹고 페어한 덕에 제이슨과의 식사 쿠폰도 얻었다. 예~✌️ 정말 많이 배웠고 좋은 경험이었다. 언제 또 제이슨이랑 페어해보겠어?ㅎㅎ 담에 기회되면 또 하고싶다.
 
 ### 6월 3일 (금)
-- [ ] 10시 장바구니 팀 회고
-- [ ] 스프링 스터디 14장
-- [ ] 15시 스프링 스터디
-- [ ] 17시 장바구니 팀 회의
-- [ ] 글쓰기 리뷰 3명
+- [x] 10시 장바구니 팀 회고
+- [x] 스프링 스터디 14장
+- [x] 15시 스프링 스터디
+- [x] 17시 장바구니 팀 회의
+- [x] 글쓰기 리뷰 3명
+---
+너무 피곤해서 칼퇴하려고 했는데 코린, 배카라, 아스피, 알렉스, 이스트가 떡볶이 먹고 가자해서 저녁으로 떡볶이를 먹었다. 우리할매떡볶이가 맛있대서 가보고 싶었는데 너무 오래 기다려야해서 아쉽게 못 갔다.
+먹고 싶었던 떡볶이를 먹어서 좋긴 했는데 2% 부족한 느낌.. 쌀떡이 아니라 그런가 ^-^.. 조만간 우리할매떡볶이 도전하러 가야지. 코린 같이 가~~~
