--- a/민초/5월30일-6월3일.md
+++ b/민초/5월30일-6월3일.md
@@ -23,8 +23,8 @@
 
 # 6. 3.
 
-- [ ] 테코톡 자막 작업
-- [ ] 협업 step1 회고
-- [ ] 수업
-- [ ] 협업 회의
-- [ ] 근로 회식
+- [x] 테코톡 자막 작업
+- [x] 협업 step1 회고
+- [x] 수업
+- [x] 협업 회의
+- [x] 근로 회식
