--- a/민초/5월30일-6월3일.md
+++ b/민초/5월30일-6월3일.md
@@ -20,3 +20,11 @@
   - [x] 상세페이지 연결 기능
   - [x] 리팩토링
   - [x] PR 제출
+
+# 6. 3.
+
+- [x] 테코톡 자막 작업
+- [x] 협업 step1 회고
+- [x] 수업
+- [x] 협업 회의
+- [x] 근로 회식
