[아서] 6월 7일 완료

--- a/아서/6월7일~6월12일.md
+++ b/아서/6월7일~6월12일.md
@@ -1,6 +1,7 @@
 ## 6월 7일
 
-- [ ] 2단계 미션 회의
-- [ ] 2단계 미션 시작
-  - [ ] Legacy 리팩터링
-  - [ ] urI 및 request 수정
+- [x] 2단계 미션 회의
+- [x] 2단계 미션 시작
+  - [x] Legacy 리팩터링
+  - [x] urI 및 request 수정
+
