--- a/파랑/6월6일~6월12일.md
+++ b/파랑/6월6일~6월12일.md
@@ -1,6 +1,6 @@
 ### 6월 7일 (월)
-- [ ] 15시 근로 회의
-- [ ] 15시 30분 코틀린 스터디
-- [ ] DB 연결
-- [ ] 장바구니 미션 2단계
-- [ ] 글쓰기 approve 요청하기
+- [x] 15시 근로 회의
+- [x] 15시 30분 코틀린 스터디
+- [x] DB 연결
+- [x] 장바구니 미션 2단계
+- [x] 글쓰기 approve 요청하기
