[티거] 6월 7일 완료

--- a/티거/6월6일-6월12일.md
+++ b/티거/6월6일-6월12일.md
@@ -2,9 +2,9 @@
 
 ## 6월 7일 (화)
 
-- [ ] 10시 30분 강의 < React 복습 (3/3) >
-- [ ] 협업 장바구니
-  - [ ] 리팩토링
-  - [ ] 회원 기능 서버 연결
-  - [ ] 장바구니 기능
-- [ ] 글쓰기 < 레벨 2 - 성장 > 최종
+- [x] 10시 30분 강의 < React 복습 (3/3) >
+- [x] 협업 장바구니
+  - [x] 리팩토링
+  - [x] 회원 기능 서버 연결
+  - [x] 장바구니 기능
+- [x] 글쓰기 < 레벨 2 - 성장 > 최종
