6월 7일 에덴 계획 완료

--- a/에덴/6월7일-6월10일.md
+++ b/에덴/6월7일-6월10일.md
@@ -1,6 +1,6 @@
 ## 6월 7일
 
-- [ ] 스프링 스터디
-- [ ] 학습로그 말하기 및 수업
-- [ ] 미션 2단계 진행
-- [ ] 근로 주간 회의
+- [x] 스프링 스터디
+- [x] 학습로그 말하기 및 수업
+- [x] 미션 2단계 진행
+- [x] 근로 주간 회의
