[파랑] 6월8일 계획

--- a/파랑/6월6일~6월12일.md
+++ b/파랑/6월6일~6월12일.md
@@ -1,6 +1,10 @@
-### 6월 7일 (월)
+### 6월 7일 (화)
 - [x] 15시 근로 회의
 - [x] 15시 30분 코틀린 스터디
 - [x] DB 연결
 - [x] 장바구니 미션 2단계
 - [x] 글쓰기 approve 요청하기
+
+### 6월 8일 (수)
+- [ ] 장바구니 2단계 PR
+- [ ] 배포
