--- a/잉/6월07일~6월10일.md
+++ b/잉/6월07일~6월10일.md
@@ -1,7 +1,7 @@
 ### 6월 7일 (화)
-- [ ] 장바구니 2단계
-    - [ ] 제품관련 기능
-    - [ ] 장바구니관련 기능    
-- [ ] 글쓰기 피드백 반영 제출
-- [ ] 스프링 스터디
-- [ ] 학습근로 회의
+- [x] 장바구니 2단계
+    - [x] 제품관련 기능
+    - [x] 장바구니관련 기능    
+- [x] 글쓰기 피드백 반영 제출
+- [x] 스프링 스터디
+- [x] 학습근로 회의
