--- a/티거/6월6일-6월12일.md
+++ b/티거/6월6일-6월12일.md
@@ -8,3 +8,11 @@
   - [x] 회원 기능 서버 연결
   - [x] 장바구니 기능
 - [x] 글쓰기 < 레벨 2 - 성장 > 최종
+
+## 6월 8일 (수)
+
+- [ ] 협업 장바구니
+  - [ ] 14시 회의
+  - [ ] 서버 연결
+  - [ ] 리팩토링
+- [ ] 16시 30분
