--- a/앨버/6월7일~6월10일.md
+++ b/앨버/6월7일~6월10일.md
@@ -5,3 +5,11 @@
 - [x] 근로 피드백 반영 (16:00 ~ 17:00)
 - [x] 저녁 약속
 - [x] 미션 리팩토링 
+
+## 6월 8일
+
+- [ ] 협업 회의 (10:30 ~ 11:30)
+- [ ] 실시간 백엔드와의 협업 (14:00 ~ 18:00)
+- [ ] 근로 PR 피드백 답변 달기 (아침)
+- [ ] 리뷰어님과의 저녁 식사
+- [ ] 리팩토링
