feat: 코린 6월8일 계획 추가

--- a/코린/6월7일-6월12일.md
+++ b/코린/6월7일-6월12일.md
@@ -4,3 +4,10 @@
 - [x] 장바구니 2단계 PR
 - [x] 수업 듣기
 - [x] 학습로그 말하기
+
+## 6월8일
+
+- [ ] 알고리즘 스터디
+- [ ] 서버에 https 적용하기
+- [ ] 스프링 5 14-16 chapter 읽기
+- [ ] 스프링 발표 준비
