--- a/민초/6월7일-6월10일.md
+++ b/민초/6월7일-6월10일.md
@@ -6,6 +6,6 @@
 
 # 6. 8.
 
-- [ ] 장바구니 수량 수정 기능
-- [ ] 장바구니 체크박스 기능
-- [ ] 백엔드 API 5개 연결 확인
+- [x] 장바구니 수량 수정 기능
+- [x] 장바구니 체크박스 기능
+- [x] 백엔드 API 5개 연결 확인
