[아서] 6월 8일 일정완료

--- a/아서/6월7일~6월12일.md
+++ b/아서/6월7일~6월12일.md
@@ -9,7 +9,7 @@
 
 ## 6월 8일
 
-- [ ] 데모 데이 준비하기
-  - [ ] DB 연결하기
-  - [ ] 배포하기
-- [ ] 특별한 분 만나기
+- [x] 데모 데이 준비하기
+  - [x] DB 연결하기
+  - [x] 배포하기
+- [x] 특별한 분 만나기
