--- a/잉/6월07일~6월10일.md
+++ b/잉/6월07일~6월10일.md
@@ -7,9 +7,9 @@
 - [x] 학습근로 회의
 
 ### 6월 8일 (수)
-- [ ] OrderController test 통과시키기
-- [ ] 페이징 처리
-- [ ] 비밀보호 길이 검증 문제 해결
-- [ ] 각 종 예외처리
-- [ ] 배포
-- [ ] 수면 
+- [x] OrderController test 통과시키기
+- [x] 페이징 처리
+- [x] 비밀보호 길이 검증 문제 해결
+- [x] 각 종 예외처리
+- [x] 배포
+- [x] 수면 
