[잉] 6월 8일 계획 (#527)
* 220608 잉 일정

* 220608 잉 일정 완료

--- a/잉/6월07일~6월10일.md
+++ b/잉/6월07일~6월10일.md
@@ -5,3 +5,11 @@
 - [x] 글쓰기 피드백 반영 제출
 - [x] 스프링 스터디
 - [x] 학습근로 회의
+
+### 6월 8일 (수)
+- [x] OrderController test 통과시키기
+- [x] 페이징 처리
+- [x] 비밀보호 길이 검증 문제 해결
+- [x] 각 종 예외처리
+- [x] 배포
+- [x] 수면 
