220608 앨버 계획 완료

--- a/앨버/6월7일~6월10일.md
+++ b/앨버/6월7일~6월10일.md
@@ -8,8 +8,8 @@
 
 ## 6월 8일
 
-- [ ] 협업 회의 (10:30 ~ 11:30)
-- [ ] 실시간 백엔드와의 협업 (14:00 ~ 18:00)
-- [ ] 근로 PR 피드백 답변 달기 (아침)
-- [ ] 리뷰어님과의 저녁 식사
-- [ ] 리팩토링
+- [x] 협업 회의 (10:30 ~ 11:30)
+- [x] 실시간 백엔드와의 협업 (14:00 ~ 18:00)
+- [x] 근로 PR 피드백 답변 달기 (아침)
+- [x] 리뷰어님과의 저녁 식사
+- [x] 리팩토링
