--- a/오리/6월6일~6월12일.md
+++ b/오리/6월6일~6월12일.md
@@ -6,7 +6,7 @@
 - [x] 파랑 멘탈 케어
 
 ### 6월 8일 (수)
-- [ ] https 해결
-- [ ] 알고리즘 밀린거 23개 풀...기...시작...
-- [ ] 이제는 알 것 같은분 특강
-- [ ] 저녁 회식에서 술 적게 마시기
+- [x] https 해결
+- [x] 알고리즘 밀린거 23개 풀...기...시작...
+- [x] 이제는 알 것 같은분 특강
+- [x] 저녁 회식에서 술 적게 마시기
