[오리] 6월 8일 계획 (#525)
* [오리] 6월 8일 계획

* [오리] 6월 8일 계획 완료

--- a/오리/6월6일~6월12일.md
+++ b/오리/6월6일~6월12일.md
@@ -4,3 +4,9 @@
 - [x] 2단계 피드백 반영 및 pr
 - [x] 페어 db 연결
 - [x] 파랑 멘탈 케어
+
+### 6월 8일 (수)
+- [x] https 해결
+- [x] 알고리즘 밀린거 23개 풀...기...시작...
+- [x] 이제는 알 것 같은분 특강
+- [x] 저녁 회식에서 술 적게 마시기
