--- a/코린/6월7일-6월12일.md
+++ b/코린/6월7일-6월12일.md
@@ -7,7 +7,7 @@
 
 ## 6월8일
 
-- [ ] 알고리즘 스터디
-- [ ] 서버에 https 적용하기
-- [ ] 스프링 5 14-16 chapter 읽기
-- [ ] 스프링 발표 준비
+- [x] 알고리즘 스터디
+- [x] 서버에 https 적용하기
+- [x] 스프링 5 14-16 chapter 읽기
+- [x] 스프링 발표 준비
