[파랑] 6월8일 계획 (#526)
* [파랑] 6월8일 계획

* [파랑] 6월8일 계획완료

--- a/파랑/6월6일~6월12일.md
+++ b/파랑/6월6일~6월12일.md
@@ -1,6 +1,16 @@
-### 6월 7일 (월)
+### 6월 7일 (화)
 - [x] 15시 근로 회의
 - [x] 15시 30분 코틀린 스터디
 - [x] DB 연결
 - [x] 장바구니 미션 2단계
 - [x] 글쓰기 approve 요청하기
+
+### 6월 8일 (수)
+- [x] 장바구니 2단계 PR
+- [x] 배포
+---
+오늘 안에 배포까지 마무리해야 한다는 압박감에 도리어 미션이 너무 하기 싫었던 하루였다.
+그래도 열심히 달려서 어찌저찌 돌아가는 코드는 만들었다. 배포가 오래 걸릴줄 알았는데 크리스랑 쿼리치가 많이 도와줘서 금방 끝낼 수 있었다. 저녁까지 기다려준 프론트 크루들한테도 고마웠다.
+내가 만든 기능들이 잘 돌아가는 걸 프론트랑 연결해서 확인할 때의 그 짜릿함이란.. 최고.
+배포 끝내고 저녁에 잠깐 제이슨이랑 얘기하는데 제이슨이 내 블로그 일기를 보고 미안했다고 한다. 제이슨이 미안해해서 내가 더 미안했다😅. 
+처음엔 제이슨 쟈가운 사람인줄 알았는데 알면 알수록 재밌고 따뜻한 사람인 것 같다. 네오랑 제이슨이랑 같이 근로할 수 있어서 좋다. 레벨 3이 더 기대된다ㅎㅎ.
