[티거] 6월 8일 완료

--- a/티거/6월6일-6월12일.md
+++ b/티거/6월6일-6월12일.md
@@ -11,8 +11,7 @@
 
 ## 6월 8일 (수)
 
-- [ ] 협업 장바구니
-  - [ ] 14시 회의
-  - [ ] 서버 연결
-  - [ ] 리팩토링
-- [ ] 16시 30분 정특대
+- [x] 협업 장바구니
+  - [x] 14시 회의
+  - [x] 서버 연결
+  - [x] 리팩토링
