--- a/오리/6월6일~6월12일.md
+++ b/오리/6월6일~6월12일.md
@@ -10,3 +10,8 @@
 - [x] 알고리즘 밀린거 23개 풀...기...시작...
 - [x] 이제는 알 것 같은분 특강
 - [x] 저녁 회식에서 술 적게 마시기
+
+### 6월 9일 (목)
+- [ ] db 서버 이슈 해결
+- [ ] 데모데이
+- [ ] 휴식
