[파랑] 6월9일 계획완료

--- a/파랑/6월6일~6월12일.md
+++ b/파랑/6월6일~6월12일.md
@@ -16,6 +16,8 @@
 처음엔 제이슨 쟈가운 사람인줄 알았는데 알면 알수록 재밌고 따뜻한 사람인 것 같다. 네오랑 제이슨이랑 같이 근로할 수 있어서 좋다. 레벨 3이 더 기대된다ㅎㅎ.
 
 ### 6월 9일 (목)
-- [ ] 협업 회고
-- [ ] 스프링 스터디 15-17장 끝!
-- [ ] 수면
+- [x] 협업 회고
+- [x] 스프링 스터디 15-17장 끝!
+- [x] 수면
+---
+놀랍게도 내일이면 레벨2가 끝이다. 믿기지가 않네.. 내일 플젝 조가 나온다던데 너무 떨린당. 좋은 사람들이랑 할 수 있었으면 좋겠다!
