[파랑] 6월9일 계획 (#536)
* [파랑] 6월9일 계획

* [파랑] 6월9일 계획완료

--- a/파랑/6월6일~6월12일.md
+++ b/파랑/6월6일~6월12일.md
@@ -14,3 +14,10 @@
 내가 만든 기능들이 잘 돌아가는 걸 프론트랑 연결해서 확인할 때의 그 짜릿함이란.. 최고.
 배포 끝내고 저녁에 잠깐 제이슨이랑 얘기하는데 제이슨이 내 블로그 일기를 보고 미안했다고 한다. 제이슨이 미안해해서 내가 더 미안했다😅. 
 처음엔 제이슨 쟈가운 사람인줄 알았는데 알면 알수록 재밌고 따뜻한 사람인 것 같다. 네오랑 제이슨이랑 같이 근로할 수 있어서 좋다. 레벨 3이 더 기대된다ㅎㅎ.
+
+### 6월 9일 (목)
+- [x] 협업 회고
+- [x] 스프링 스터디 15-17장 끝!
+- [x] 수면
+---
+놀랍게도 내일이면 레벨2가 끝이다. 믿기지가 않네.. 내일 플젝 조가 나온다던데 너무 떨린당. 좋은 사람들이랑 할 수 있었으면 좋겠다!
