--- a/앨버/6월12일~6월18일.md
+++ b/앨버/6월12일~6월18일.md
@@ -4,6 +4,6 @@
 
 ## 6월 13일
 
-- [ ] 14714 react 공식문서 읽기 Day5
-- [ ] 14714 javascript 책 읽기 Day1
-- [ ] payments 타입스크립트 migration 1/3
+- [x] 14714 react 공식문서 읽기 Day5
+- [x] 14714 javascript 책 읽기 Day1
+- [x] payments 타입스크립트 migration 1/3
