[앨버] 6월 13일 계획 (#544)
* 220613 앨버 계획

* 220613 앨버 계획 완료

--- a/앨버/6월12일~6월18일.md
+++ b/앨버/6월12일~6월18일.md
@@ -1,3 +1,9 @@
 ## 6월 12일
 
 - [x] 14714 react 공식문서 읽기 Day4
+
+## 6월 13일
+
+- [x] 14714 react 공식문서 읽기 Day5
+- [x] 14714 javascript 책 읽기 Day1
+- [x] payments 타입스크립트 migration 1/3
