220614 앨버 계획완료

--- a/앨버/6월12일~6월18일.md
+++ b/앨버/6월12일~6월18일.md
@@ -10,5 +10,5 @@
 
 ## 6월 14일
 
-- [ ] 14714 react 공식문서 읽기 Day5
-- [ ] payments 타입스크립트 migration 1/2
+- [x] 14714 react 공식문서 읽기 Day5
+- [x] payments 타입스크립트 migration 1/2
