--- a/오리/6월13일~6월19일.md
+++ b/오리/6월13일~6월19일.md
@@ -1,4 +1,4 @@
 ### 제주도 가기전
-- [ ] 사이드 리뷰 기능 구현
-- [ ] jpa 스터디 전 세션 내용 체크
-- [ ] 영상근로 편집영상 체크
+- [x] 사이드 리뷰 기능 구현
+- [x] jpa 스터디 전 세션 내용 체크
+- [x] 영상근로 편집영상 체크
