220618 앨버 계획 완료

--- a/앨버/6월12일~6월19일.md
+++ b/앨버/6월12일~6월19일.md
@@ -13,8 +13,8 @@
 - [x] 14714 react 공식문서 읽기 Day5
 - [x] payments 타입스크립트 migration 1/2
 
-## 6월 15일
+## 6월 18일
 
-- [ ] 14714 react 공식문서 읽기 Day6
-- [ ] 14714 자바스크립트 책 읽기 Day2
-- [ ] payments 타입스크립트 migration 3/4
+- [x] 14714 react 공식문서 읽기 Day6
+- [x] 14714 자바스크립트 책 읽기 Day2
+- [x] payments 타입스크립트 migration 3/4
