220619 앨버 계획 완료

--- a/앨버/6월12일~6월19일.md
+++ b/앨버/6월12일~6월19일.md
@@ -21,5 +21,5 @@
 
 ## 6월 19일
 
-- [ ] 14714 react 공식문서 읽기 Day7
-- [ ] 14714 자바스크립트 책 읽기 Day3
+- [x] 14714 react 공식문서 읽기 Day7
+- [x] 14714 자바스크립트 책 읽기 Day3
