--- a/앨버/6월12일~6월19일.md
+++ b/앨버/6월12일~6월19일.md
@@ -18,3 +18,8 @@
 - [x] 14714 react 공식문서 읽기 Day6
 - [x] 14714 자바스크립트 책 읽기 Day2
 - [x] payments 타입스크립트 migration 3/4
+
+## 6월 19일
+
+- [x] 14714 react 공식문서 읽기 Day7
+- [x] 14714 자바스크립트 책 읽기 Day3
