--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -1,5 +1,5 @@
 ## 6월 20일
 
-- [ ] 14714 react 공식문서 읽기 Day7
-- [ ] 14714 react 공식문서 읽기 Day4
-- [ ] typescript exercise 1~9 복습  
+- [x] 14714 react 공식문서 읽기 Day7
+- [x] 14714 react 공식문서 읽기 Day4
+- [x] typescript exercise 1~9 복습  
