--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -1,5 +1,11 @@
 ## 6월 20일
 
 - [x] 14714 react 공식문서 읽기 Day7
-- [x] 14714 react 공식문서 읽기 Day4
+- [x] 14714 javascript 공식문서 읽기 Day4
 - [x] typescript exercise 1~9 복습  
+
+## 6월 21일
+
+- [ ] 14714 react 공식문서 읽기 Day8
+- [ ] 14714 javascript 공식문서 읽기 Day5
+- [ ] typescript exercise 1~9 복습 (이어서)
