--- a/민초/6월21일-6월24일.md
+++ b/민초/6월21일-6월24일.md
@@ -1,8 +1,9 @@
 # 6.21.
 
-- [ ] OS - 프레임 관련 이슈
-- [ ] OS - 입출력 시스템
-- [ ] OS - 디스크 장치
-- [ ] OS - 디스크 스케줄링
-- [ ] OS - RAID
-- [ ] TCP/IP 책 1~5장 읽기
+- [x] OS - 프레임 관련 이슈
+- [x] OS - 입출력 시스템
+- [x] OS - 디스크 장치
+- [x] OS - 디스크 스케줄링
+- [x] OS - RAID
+- [ ] ~~TCP/IP 책 1~5장 읽기~~ <- 내일 이어서
+
