[민초] 6월 22일 계획

--- a/민초/6월21일-6월24일.md
+++ b/민초/6월21일-6월24일.md
@@ -7,3 +7,8 @@
 - [x] OS - RAID
 - [ ] ~~TCP/IP 책 1~5장 읽기~~ <- 내일 이어서
 
+# 6.22.
+
+- [ ] TCP/IP 책 앞장부터 끝장까지 빠르게 훑기
+- [ ] 한 챕터씩 다시 읽으면서 마크다운으로 정리
+
