--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -6,6 +6,6 @@
 
 ## 6월 21일
 
-- [ ] 14714 react 공식문서 읽기 Day8
-- [ ] 14714 javascript 공식문서 읽기 Day5
-- [ ] typescript exercise 1~9 복습 (이어서)
+- [x] 14714 react 공식문서 읽기 Day8
+- [x] 14714 javascript 공식문서 읽기 Day5
+- [x] typescript exercise 1~9 복습 (이어서)
