--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -1,11 +1,17 @@
 ## 6월 20일
 
 - [x] 14714 react 공식문서 읽기 Day7
-- [x] 14714 javascript 공식문서 읽기 Day4
+- [x] 14714 javascript 공식문서 읽기 Day3
 - [x] typescript exercise 1~9 복습  
 
 ## 6월 21일
 
 - [x] 14714 react 공식문서 읽기 Day8
-- [x] 14714 javascript 공식문서 읽기 Day5
+- [x] 14714 javascript 공식문서 읽기 Day4
 - [x] typescript exercise 1~9 복습 (이어서)
+
+## 6월 22일
+- [ ] 14714 react 공식문서 읽기 Day9
+- [ ] 14714 javascript 공식문서 읽기 Day5
+- [ ] typescript exercise 1~9 복습
+- [ ] 알고리즘 조금~
