[파랑] 6월21일 계획완료

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -8,7 +8,9 @@
 그렇다기엔 내일 네오조 MT지만ㅋㅎ,, 여튼ㅎ 남은 방학 일주일도 알차게 보내보자👊.
 
 ### 6월 21일 (화)
-- [ ] 코로나 격리 지원금 신청
-- [ ] 11시 30분 필라테스
-- [ ] 건강검진
-- [ ] 네오조 MT
+- [x] 코로나 격리 지원금 신청
+- [x] 11시 30분 필라테스
+- [x] 건강검진
+- [x] 네오조 MT
+---
+네오조 엠티 재밌었다. 썬이 막차 타고 가서 어이없었다. 이제 진짜 방학이 얼마 안 남았다. 방학이 일주일만 더 연장됐으면 좋겠다.
