[파랑] 6월22일 계획

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -14,3 +14,8 @@
 - [x] 네오조 MT
 ---
 네오조 엠티 재밌었다. 썬이 막차 타고 가서 어이없었다. 이제 진짜 방학이 얼마 안 남았다. 방학이 일주일만 더 연장됐으면 좋겠다.
+
+### 6월 22일 (수)
+- [ ] 14시 팀 회의
+- [ ] 18시 필라테스
+- [ ] 코틀린 8장
