[아서] 6월 22일 완료

--- a/아서/6월20일~6월26일.md
+++ b/아서/6월20일~6월26일.md
@@ -1,6 +1,6 @@
 ## 6월 22일
 
-- [ ] 런데이 1일차 달리기
-- [ ] 스크럼 60쪽까지 읽기
-- [ ] JPA 섹션 4 듣기
-- [ ] 저녁 약속
+- [x] 런데이 1일차 달리기
+- [x] 스크럼 60쪽까지 읽기
+- [x] JPA 섹션 4 듣기
+- [x] 저녁 약속
