--- a/민초/6월21일-6월24일.md
+++ b/민초/6월21일-6월24일.md
@@ -7,3 +7,8 @@
 - [x] OS - RAID
 - [ ] ~~TCP/IP 책 1~5장 읽기~~ <- 내일 이어서
 
+# 6.22.
+
+- [ ] 코이's 테코톡 자막 달기
+- [ ] TCP/IP 책 앞장부터 끝장까지 빠르게 훑기
+- [ ] 한 번 더 훑기
