220623 앨버 계획 완료

--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -11,7 +11,7 @@
 - [x] typescript exercise 1~9 복습 (이어서)
 
 ## 6월 22일
-- [ ] 14714 react 공식문서 읽기 Day9
-- [ ] 14714 javascript 공식문서 읽기 Day5
-- [ ] typescript exercise 1~9 복습
-- [ ] 알고리즘 조금~
+- [x] 14714 react 공식문서 읽기 Day9
+- [x] 14714 javascript 공식문서 읽기 Day5
+- [x] typescript exercise 1~9 복습
+- [x] 알고리즘 조금~
