[파랑] 6월22일 계획완료

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -16,6 +16,9 @@
 네오조 엠티 재밌었다. 썬이 막차 타고 가서 어이없었다. 이제 진짜 방학이 얼마 안 남았다. 방학이 일주일만 더 연장됐으면 좋겠다.
 
 ### 6월 22일 (수)
-- [ ] 14시 팀 회의
-- [ ] 18시 필라테스
-- [ ] 코틀린 8장
+- [x] 14시 팀 회의
+- [x] 18시 필라테스
+- [x] 코틀린 8장
+---
+오프라인 팀 회의를 진행했다. 확실히 만나서 하니까 오디오도 안 겹치고 재밌었다! 그리고 내가 냈던 우테코 캘린더가 서비스로 선정됐다. 뿌듯하기도 하고 걱정되기도 하지만 우리 팀원들이랑 함께라서 든든하다.
+`달록(dallog)`이라는 귀여운 서비스 이름과 `알록`이라는 귀여운 팀 이름도 생겼다. 🌈알록달록🌈 파이팅! 
