[파랑] 6월23일 계획

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -22,3 +22,9 @@
 ---
 오프라인 팀 회의를 진행했다. 확실히 만나서 하니까 오디오도 안 겹치고 재밌었다! 그리고 내가 냈던 우테코 캘린더가 서비스로 선정됐다. 뿌듯하기도 하고 걱정되기도 하지만 우리 팀원들이랑 함께라서 든든하다.
 `달록(dallog)`이라는 귀여운 서비스 이름과 `알록`이라는 귀여운 팀 이름도 생겼다. 🌈알록달록🌈 파이팅! 
+
+### 6월 23일 (목)
+- [ ] 10시 지원플랫폼 코드 분석
+- [ ] JPA 섹션 5, 6 섹션
+- [ ] 18시 필라테스 PT
+- [ ] 팀 회의 준비
