--- a/민초/6월21일-6월24일.md
+++ b/민초/6월21일-6월24일.md
@@ -5,10 +5,15 @@
 - [x] OS - 디스크 장치
 - [x] OS - 디스크 스케줄링
 - [x] OS - RAID
-- [ ] ~~TCP/IP 책 1~5장 읽기~~ <- 내일 이어서
+- [x] ~~TCP/IP 책 1~5장 읽기~~ <- 내일 이어서
 
 # 6.22.
 
-- [ ] 코이's 테코톡 자막 달기
-- [ ] TCP/IP 책 앞장부터 끝장까지 빠르게 훑기
-- [ ] 한 번 더 훑기
+- [x] 코이's 테코톡 자막 달기
+- [x] TCP/IP 책 앞장부터 끝장까지 빠르게 훑기
+- [x] 한 번 더 훑기
+
+# 6.23.
+
+- [x] TS 문서 읽었던거 정리
+- [x] ~~TS Excercise 풀기 -> 쉽지 않네 내일 이어서~~
