220623 앨버 계획 완료

--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -18,6 +18,6 @@
 
 ## 6월 23일
 
-- [ ] 14714 react 공식문서 읽기 Day10
-- [ ] 14714 javascript 공식문서 읽기 Day6
-- [ ] 밀린 거 하기
+- [x] 14714 react 공식문서 읽기 Day10
+- [x] 14714 javascript 공식문서 읽기 Day6
+- [x] 밀린 거 하기
