--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -15,3 +15,9 @@
 - [x] 14714 javascript 공식문서 읽기 Day5
 - [x] typescript exercise 1~9 복습
 - [x] 알고리즘 조금~
+
+## 6월 23일
+
+- [x] 14714 react 공식문서 읽기 Day10
+- [x] 14714 javascript 공식문서 읽기 Day6
+- [x] 밀린 거 하기
