[파랑] 6월23일 계획완료

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -24,7 +24,10 @@
 `달록(dallog)`이라는 귀여운 서비스 이름과 `알록`이라는 귀여운 팀 이름도 생겼다. 🌈알록달록🌈 파이팅! 
 
 ### 6월 23일 (목)
-- [ ] 10시 지원플랫폼 코드 분석
-- [ ] JPA 섹션 5, 6 섹션
-- [ ] 18시 필라테스 PT
-- [ ] 팀 회의 준비
+- [x] 10시 지원플랫폼 코드 분석
+- [x] JPA 섹션 5, 6 섹션
+- [x] 18시 필라테스 PT
+- [x] 팀 회의 준비
+---
+아침에 애쉬랑 지원플랫폼 코드를 분석하려고 만났다. 우리가 맡은 부분은 인수테스트 픽스처를 DSL로 만드는 거였는데 코드를 까보니 인수테스트가 없었다^^. 당황쓰. 그래서 일단 도메인부터 찢고 왔다.
+집에 가는 길엔 일기예보를 확인 안 한 죄로 비를 홀딱 맞았다. Fxxking 장마. 개강이 두렵다.
