[아서] 6월 25일 계획

--- a/아서/6월20일~6월26일.md
+++ b/아서/6월20일~6월26일.md
@@ -10,3 +10,12 @@
 - [x] 스크럼 3장 읽기
 - [x] JPA 섹션 5 듣기
 - [x] 집에서 비오는 날 만끽하기
+
+
+
+## 6월 25일
+
+- [x] 달리기
+- [ ] 스크럼 4장 읽기
+- [ ] JPA 스터디
+- [ ] 팀 회의
