[파랑] 6월24일 계획완료

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -33,5 +33,5 @@
 집에 가는 길엔 일기예보를 확인 안 한 죄로 비를 홀딱 맞았다. Fxxking 장마. 개강이 두렵다.
 
 ### 6월 24일 (금)
-- [ ] 10시 팀 회의
-- [ ] 객사오 읽기
+- [x] 10시 팀 회의
+- [x] 객사오 읽기
