[파랑] 6월24일 계획 (#561)
* [파랑] 6월24일 계획

* [파랑] 6월24일 계획완료

--- a/파랑/6월20일~26일.md
+++ b/파랑/6월20일~26일.md
@@ -31,3 +31,7 @@
 ---
 아침에 애쉬랑 지원플랫폼 코드를 분석하려고 만났다. 우리가 맡은 부분은 인수테스트 픽스처를 DSL로 만드는 거였는데 코드를 까보니 인수테스트가 없었다^^. 당황쓰. 그래서 일단 도메인부터 찢고 왔다.
 집에 가는 길엔 일기예보를 확인 안 한 죄로 비를 홀딱 맞았다. Fxxking 장마. 개강이 두렵다.
+
+### 6월 24일 (금)
+- [x] 10시 팀 회의
+- [x] 객사오 읽기
