--- a/앨버/6월20일~6월26일.md
+++ b/앨버/6월20일~6월26일.md
@@ -21,3 +21,9 @@
 - [x] 14714 react 공식문서 읽기 Day10
 - [x] 14714 javascript 공식문서 읽기 Day6
 - [x] 밀린 거 하기
+
+## 6월 26일
+
+- [ ] 14714 react 공식문서 읽기 Day12 13
+- [ ] 14714 javascript 공식문서 읽기 Day7
+- [ ] 학습로그 키워드 정리
