[티거] 7월 4일 완료

--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -2,6 +2,6 @@
 
 ## 7월 4일 (월)
 
-- [ ] 10시 FE 개발 환경 토의
-- [ ] 14시 스프린트 회의
-- [ ] FE 개발 환경 세팅
+- [x] 10시 FE 개발 환경 토의
+- [x] 14시 스프린트 회의
+- [x] FE 개발 환경 세팅
