--- a/아서/7월4일~7월10일.md
+++ b/아서/7월4일~7월10일.md
@@ -1,6 +1,6 @@
 ## 7월 4일
 
-- [ ] 데일리 스크럼 하기
-- [ ] 스프린트 백로그 작성하기
-- [ ] 백엔드 인수테스트 작성하기
-- [ ] MockMVC 학습하기
+- [x] 데일리 스크럼 하기
+- [x] 스프린트 백로그 작성하기
+- [x] 백엔드 인수테스트 작성하기
+- [x] MockMVC 학습하기
