[오리] 7월 5일 계획 완료

--- a/오리/7월4일~7월10일.md
+++ b/오리/7월4일~7월10일.md
@@ -1,6 +1,6 @@
 ### 7월 4일(월)
-- [ ] 데일리 스크럼
-- [ ] 백엔드 5인 페어 (남는 시간 전부)
-- [ ] 영상근로 회의 (2:30 ~ 3:00)
-- [ ] 사이드 회의 (7:00 ~ 8:00)
-- [ ] 맛집 리뷰 발표?
+- [x] 데일리 스크럼
+- [x] 백엔드 5인 페어 (남는 시간 전부)
+- [x] 영상근로 회의 (2:30 ~ 3:00)
+- [x] 사이드 회의 (7:00 ~ 8:00)
+- [x] 맛집 리뷰 발표?
