--- a/코린/7월4일-7월10일.md
+++ b/코린/7월4일-7월10일.md
@@ -1,5 +1,5 @@
 ## 7월4일
 
-- [ ] 몹프로그래밍
-- [ ] `@DataJpaTest` 공부해서 정리
-- [ ] 오늘의 개발일지 작성하기 
+- [x] 몹프로그래밍
+- [x] `@DataJpaTest` 공부해서 정리
+- [x] 오늘의 개발일지 작성하기 
