--- a/코린/7월4일-7월10일.md
+++ b/코린/7월4일-7월10일.md
@@ -3,3 +3,10 @@
 - [x] 몹프로그래밍
 - [x] `@DataJpaTest` 공부해서 정리
 - [x] 오늘의 개발일지 작성하기 
+
+## 7월5일
+
+- [ ] JPA 강의 듣기
+- [ ] 몹프로그래밍
+- [ ] 오늘의 개발일지 작성하기
+- [ ] 김영한 JPA 강의 Section 9 듣기
