7월 5일 에덴 계획

--- a/에덴/7월4일-7월10일.md
+++ b/에덴/7월4일-7월10일.md
@@ -3,3 +3,11 @@
 - [x] 팀 회의
 - [x] 근로 회의
 - [x] 몹 프로그래밍
+
+## 7월 5일
+
+- [ ] 팀 회의
+- [ ] JPA 수업
+- [ ] 몹 프로그래밍
+- [ ] DataJpaTest 어노테이션 공부
+- [ ] 운동
