[아서] 7월 5일 계획

--- a/아서/7월4일~7월10일.md
+++ b/아서/7월4일~7월10일.md
@@ -4,3 +4,12 @@
 - [x] 스프린트 백로그 작성하기
 - [x] 백엔드 인수테스트 작성하기
 - [x] MockMVC 학습하기
+
+
+
+## 7월 5일
+
+- [ ] 스크럼 요약하기
+- [ ] 백엔드 쿠폰 기능 구현하기
+- [ ] 클린 소프트웨어 훑어보기
+
