[민초] 7월 5일 계획

--- a/민초/7월4일-7월8일.md
+++ b/민초/7월4일-7월8일.md
@@ -3,3 +3,9 @@
 - [x] 근로 회의
 - [x] 레벨 3 프로젝트 페어
 - [x] React Router
+
+# 7.5. 
+
+- [ ] 레벨 3 프로젝트 - API hook 만들기
+- [ ] api hook 모킹 정상 연결 작동 테스트
+- [ ] 리액트 강의 Ch3, Ch4, Ch5
