[파랑] 7월5일 계획

--- a/파랑/7월4일~7월11일.md
+++ b/파랑/7월4일~7월11일.md
@@ -4,3 +4,9 @@
 - [x] 알록달록 백엔드 회의 및 구현 시작
 - [x] JPA 10강
 - [x] 금주
+
+### 7월 5일 (화)
+- [ ] 10시 30분 수업
+- [ ] 제이슨과의 점심
+- [ ] 몹 프로그래밍 - 일정 추가 기능
+- [ ] 근로 페어
