--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -5,3 +5,12 @@
 - [x] 10시 FE 개발 환경 토의
 - [x] 14시 스프린트 회의
 - [x] FE 개발 환경 세팅
+
+## 7월 5일 (화)
+
+- [ ] 메인 페이지 디자인 명세
+- [ ] 일정 추가 모달 디자인 명세
+- [ ] 컴포넌트 구현
+  - [ ] 내비게이션 바
+  - [ ] 메인 페이지
+  - [ ] 일정 추가 모달
