[파랑] 7월5일 계획완료

--- a/파랑/7월4일~7월11일.md
+++ b/파랑/7월4일~7월11일.md
@@ -6,7 +6,9 @@
 - [x] 금주
 
 ### 7월 5일 (화)
-- [ ] 10시 30분 수업
-- [ ] 제이슨과의 점심
-- [ ] 몹 프로그래밍 - 일정 추가 기능
-- [ ] 근로 페어
+- [x] 10시 30분 수업
+- [x] 제이슨과의 점심
+- [x] 몹 프로그래밍 - 일정 추가 기능
+- [x] 근로 페어
+---
+저녁에 잠실 가서 근로 스터디, 페어하고 집에 가니 11시 30분... 너무 피곤해
