--- a/아서/7월4일~7월10일.md
+++ b/아서/7월4일~7월10일.md
@@ -9,7 +9,7 @@
 
 ## 7월 5일
 
-- [ ] 스크럼 요약하기
-- [ ] 백엔드 쿠폰 기능 구현하기
-- [ ] 클린 소프트웨어 훑어보기
+- [x] 스크럼 요약하기
+- [x] 백엔드 쿠폰 기능 구현하기
+- [x] 클린 소프트웨어 훑어보기
 
