feat: 코린 7월5일 계획 완료

--- a/코린/7월4일-7월10일.md
+++ b/코린/7월4일-7월10일.md
@@ -6,7 +6,7 @@
 
 ## 7월5일
 
-- [ ] JPA 강의 듣기
-- [ ] 몹프로그래밍
-- [ ] 오늘의 개발일지 작성하기
-- [ ] 김영한 JPA 강의 Section 9 듣기
+- [x] JPA 강의 듣기
+- [x] 몹프로그래밍
+- [x] 오늘의 개발일지 작성하기
+- [x] 김영한 JPA 강의 Section 9 듣기
