--- a/오리/7월4일~7월10일.md
+++ b/오리/7월4일~7월10일.md
@@ -4,3 +4,7 @@
 - [x] 영상근로 회의 (2:30 ~ 3:00)
 - [x] 사이드 회의 (7:00 ~ 8:00)
 - [x] 맛집 리뷰 발표?
+
+### 7월 5일(화)
+- [x] 오전 jpa 강의
+- [x] 백엔드 5인페어 (남는 시간 전부)
