7월 5일 에덴 계획 완료

--- a/에덴/7월4일-7월10일.md
+++ b/에덴/7월4일-7월10일.md
@@ -6,8 +6,8 @@
 
 ## 7월 5일
 
-- [ ] 팀 회의
-- [ ] JPA 수업
-- [ ] 몹 프로그래밍
-- [ ] DataJpaTest 어노테이션 공부
-- [ ] 운동
+- [x] 팀 회의
+- [x] JPA 수업
+- [x] 몹 프로그래밍
+- [x] DataJpaTest 어노테이션 공부
+- [x] 운동
