[에덴] 7월 5일 계획 (#577)
* 7월 5일 에덴 계획

* 7월 5일 에덴 계획 완료

--- a/에덴/7월4일-7월10일.md
+++ b/에덴/7월4일-7월10일.md
@@ -3,3 +3,11 @@
 - [x] 팀 회의
 - [x] 근로 회의
 - [x] 몹 프로그래밍
+
+## 7월 5일
+
+- [x] 팀 회의
+- [x] JPA 수업
+- [x] 몹 프로그래밍
+- [x] DataJpaTest 어노테이션 공부
+- [x] 운동
