--- a/잉/7월04일~7월10일.md
+++ b/잉/7월04일~7월10일.md
@@ -4,3 +4,9 @@
 - [x] 티타임 백엔드 세팅 16:00~18:00
 - [x] 티타임 백엔드 개발 19:00~21:00   
 
+### 7월 5일 (화)
+- [x] JPA강의 - 오전
+- [x] api명세서 회의 - 14:00~
+- [x] 백엔드 개발 16:00~18:00
+- [x] Transactional 공부 
+
