--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -8,9 +8,9 @@
 
 ## 7월 5일 (화)
 
-- [ ] 메인 페이지 디자인 명세
-- [ ] 일정 추가 모달 디자인 명세
-- [ ] 컴포넌트 구현
-  - [ ] 내비게이션 바
-  - [ ] 메인 페이지
-  - [ ] 일정 추가 모달
+- [x] 메인 페이지 디자인 명세
+- [x] 일정 추가 모달 디자인 명세
+- [x] 컴포넌트 구현
+  - [x] 내비게이션 바
+  - [x] 메인 페이지 (일정 추가 버튼)
+  - [x] 일정 추가 모달
