[티거] 7월 5일 계획 (#582)
우리 팀의 화이팅 구호 "알록~ 달록~!"
하고 나면 웃게 돼서 좋다 ㅋㅋㅋㅋㅋㅋ

나인이랑 하루 종일 알차게 보냈던 하루!
처음부터 끝까지 지긋지긋할 정도로 에러를 많이 만났는데 다 해결하긴 했다
컴포넌트 구현도 시작했다
이제서야 뭔가를 하고 있는 것 같은 느낌~?
우리가 많이 느리다고 생각해서 초조하기도 했는데
프론트엔드 크루들은 다 비슷하게 진행하고 있는 것 같다
아무리 생각해도 이번 프론트엔드... 빡세다 ;ㅇ;

나인 시지프 준찌 + 시지프준찌네 팀 다 같이 저녁으로 곱창전골을 먹으러 갔다
꾸역꾸역 만들어진 여유였지만 맛있는 식사였다
기대했던 것보다 더 좋았음!

아무래도 백엔드 크루들이랑 함께 생활하는 건 처음이다 보니
매일 새로운 크루를 적어도 한 명은 알게 되고 이야기도 하게 된다 ✨
레벨 3 + 선릉이 좋은 큰~ 이유 중 하나랄까
4기 크루들 전부랑 한마디씩은 하고 수료하고 싶다

--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -5,3 +5,12 @@
 - [x] 10시 FE 개발 환경 토의
 - [x] 14시 스프린트 회의
 - [x] FE 개발 환경 세팅
+
+## 7월 5일 (화)
+
+- [x] 메인 페이지 디자인 명세
+- [x] 일정 추가 모달 디자인 명세
+- [x] 컴포넌트 구현
+  - [x] 내비게이션 바
+  - [x] 메인 페이지 (일정 추가 버튼)
+  - [x] 일정 추가 모달
