--- a/민초/7월4일-7월8일.md
+++ b/민초/7월4일-7월8일.md
@@ -6,6 +6,11 @@
 
 # 7.5. 
 
-- [ ] 레벨 3 프로젝트 - API hook 만들기
-- [ ] api hook 모킹 정상 연결 작동 테스트
-- [ ] 리액트 강의 Ch3, Ch4, Ch5
+- [x] 레벨 3 프로젝트 - API hook 만들기
+- [x] api hook 모킹 정상 연결 작동 테스트
+- [x] 리액트 강의 Ch3, Ch4, Ch5
+
+# 7.6. 
+
+- [ ] 데모데이 발표 준비
+- [ ] 레벨 3 프로젝트 리팩토링
