--- a/에덴/7월4일-7월10일.md
+++ b/에덴/7월4일-7월10일.md
@@ -11,3 +11,11 @@
 - [x] 몹 프로그래밍
 - [x] DataJpaTest 어노테이션 공부
 - [x] 운동
+
+## 7월 6일
+
+- [ ] 팀 회의
+- [ ] 몹 프로그래밍
+- [ ] 근로 회의
+- [ ] DataJpaTest 어노테이션 더 공부
+- [ ] 운동
