[앨버] 7월 5일 계획 (#579)
* 220705 앨버 계획

* 220705 앨버 계획 완료

--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -4,3 +4,11 @@
 - [x] 자바스크립트 14714 Day1
 - [x] 리액트 14714 Day1
 - [x] 블링 블로그 읽기 (틈틈이)
+
+
+## 7월 5일
+
+- [x] 프로젝트 진행
+  - [x] 재사용 컴포넌트 추출 및 생성
+  - [x] 피그마 마무리
+  - [x] 타입스크립트와 싸우기..
