--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -12,3 +12,11 @@
   - [x] 재사용 컴포넌트 추출 및 생성
   - [x] 피그마 마무리
   - [x] 타입스크립트와 싸우기..
+
+
+## 7월 6일
+- [ ] 프로젝트 진행
+- [ ] 투표 생성 페이지
+- [ ] 투표 진행 페이지
+- [ ] typescript 코드 리팩토링
+- [ ] css 잘 작성해보기 (공부 병행)
