[오리] 7월 6일 계획 완료

--- a/오리/7월4일~7월10일.md
+++ b/오리/7월4일~7월10일.md
@@ -10,6 +10,6 @@
 - [x] 백엔드 5인페어 (남는 시간 전부)
 
 ### 7월 6일(수)
-- [ ] 오전 이슈 몹프로그래밍
-- [ ] 오후 api 백, 프론트연결 테스트
-- [ ] 팀 pr 리뷰
+- [x] 오전 이슈 몹프로그래밍
+- [x] 오후 api 백, 프론트연결 테스트
+- [x] 팀 pr 리뷰
