[파랑] 7월 6일 계획완료

--- a/파랑/7월4일~7월11일.md
+++ b/파랑/7월4일~7월11일.md
@@ -14,7 +14,7 @@
 저녁에 잠실 가서 근로 스터디, 페어하고 집에 가니 11시 30분... 너무 피곤해
 
 ### 7월 6일 (수)
-- [ ] 몹 프로그래밍 - 일정 조회 기능
-- [ ] (제이슨한테 연락온다면) 근로 페어 플래닝 포커
-- [ ] 데모데이 준비
-- [ ] 20시 필라테스
+- [x] 몹 프로그래밍 - 일정 조회 기능
+- [x] (제이슨한테 연락온다면) 근로 페어 플래닝 포커
+- [x] 데모데이 준비
+- [x] 20시 필라테스
