--- a/민초/7월4일-7월8일.md
+++ b/민초/7월4일-7월8일.md
@@ -12,6 +12,6 @@
 
 # 7.6. 
 
-- [ ] 데모데이 발표 준비
-- [ ] 실제 API 연결 테스트
-- [ ] 레벨 3 프로젝트 리팩토링
+- [x] 데모데이 발표 준비
+- [x] 실제 API 연결 테스트
+- [x] 레벨 3 프로젝트 리팩토링
