--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -17,8 +17,8 @@
 
 ## 7월 6일 (수)
 
-- [ ] 컴포넌트 구현 with 9️⃣
-  - [ ] 일정 추가 모달
-- [ ] 기능 구현 with 9️⃣
-  - [ ] 일정 추가
-  - [ ] 일정 조회
+- [x] 컴포넌트 구현 with 9️⃣
+  - [x] 일정 추가 모달
+- [x] 기능 구현 with 9️⃣
+  - [x] 일정 추가
+  - [x] 일정 조회
