--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -14,3 +14,11 @@
   - [x] 내비게이션 바
   - [x] 메인 페이지 (일정 추가 버튼)
   - [x] 일정 추가 모달
+
+## 7월 6일 (수)
+
+- [x] 컴포넌트 구현 with 9️⃣
+  - [x] 일정 추가 모달
+- [x] 기능 구현 with 9️⃣
+  - [x] 일정 추가
+  - [x] 일정 조회
