--- a/잉/7월04일~7월10일.md
+++ b/잉/7월04일~7월10일.md
@@ -11,7 +11,7 @@
 - [x] Transactional 공부 
 
 ### 7월 6일 (수)
-- [ ] JPA 영속성 컨텍스트 공부
-- [ ] 티타인 백엔드 개발 
-- [ ] 알고리즘 2문제. 
+- [x] JPA 영속성 컨텍스트 공부
+- [x] 티타인 백엔드 개발 
+- [x] 알고리즘 2문제. 
 
