220706 앨버계획 완료

--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -15,8 +15,8 @@
 
 
 ## 7월 6일
-- [ ] 프로젝트 진행
-- [ ] 투표 생성 페이지
-- [ ] 투표 진행 페이지
-- [ ] typescript 코드 리팩토링
-- [ ] css 잘 작성해보기 (공부 병행)
+- [x] 프로젝트 진행
+- [x] 투표 생성 페이지
+- [x] 투표 진행 페이지
+- [x] typescript 코드 리팩토링
+- [x] css 잘 작성해보기 (공부 병행)
