--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -20,3 +20,10 @@
 - [x] 투표 진행 페이지
 - [x] typescript 코드 리팩토링
 - [x] css 잘 작성해보기 (공부 병행)
+
+## 7월 7일
+
+- [ ] 프로젝트 진행
+- [ ] 투표 결과 페이지 진행
+- [ ] 투표 진행 페이지 마감
+- [ ] 추가 공부 (typescript, css)
