[티거] 7월 7일 완료

--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -25,7 +25,7 @@
 
 ## 7월 7일 (수) - 01 🎂
 
-- [ ] 알록달록 with 9️⃣
-  - [ ] 일정 조회 기능 구현
-  - [ ] 메인 페이지 구현
-  - [ ] 데모 데이 발표 자료 준비
+- [x] 알록달록 with 9️⃣
+  - [x] 일정 조회 기능 구현
+  - [x] 메인 페이지 구현
+  - [x] 데모 데이 발표 자료 준비
