--- a/파랑/7월4일~7월11일.md
+++ b/파랑/7월4일~7월11일.md
@@ -18,3 +18,10 @@
 - [x] (제이슨한테 연락온다면) 근로 페어 플래닝 포커
 - [x] 데모데이 준비
 - [x] 20시 필라테스
+
+### 7월 7일 (목)
+- [x] 몹 프로그래밍 - 예외케이스 처리
+- [x] 14시 근로 페어
+- [x] 15시 매고라
+- [x] 데모데이 발표 준비
+- [x] 22시 필라테스
