[티거] 7월 7일 계획 (#595)
첫 번째 스프린트 개발 끝~!
계획했던 기능을 무사히 전부 개발했다
방학 때 한참 쉬다가 오랜만에 개발해서 그런지 머리가 빠릿빠릿하게 돌진 않았다
그래도 아직은 어려운 기능이 없어서 무난 무난 🙃
나인이랑 하루 종일 달리니까 재밌었다 🏃🏻‍♀️
아직 코드가 깔끔하진 않아서 앞으로 더 머리를 굴려야 할 것 같긴 하다
내일 발표만 잘 끝내면 1차 데모는 무사히 끝난다
알록달록 최고
파랑 나인 발표 화이랭
(로테이션 돌면 최종 발표는 나....😇)

테코톡 랜덤 당첨... 다행히 안됐다
열심히 고민하고 준비해서 레벨 4?5?에 잘하고 싶다

레벨 3 코치 네오!
오늘 선릉으로 출근하신 덕분에 처음으로 제대로 인사 나누고 이야기했다
아주 처음으로 뵌 건 아니지만 인상이 엄청 엄청 좋으시다
가깝고 친근한 느낌~!
백엔드 팀원들 말로는 회식에 참여하기도 하신다던데 기대가 된다 호호
얼른 가까워지고 싶다 😛

--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -22,3 +22,10 @@
 - [x] 기능 구현 with 9️⃣
   - [x] 일정 추가
   - [x] 일정 조회
+
+## 7월 7일 (수) - 01 🎂
+
+- [x] 알록달록 with 9️⃣
+  - [x] 일정 조회 기능 구현
+  - [x] 메인 페이지 구현
+  - [x] 데모 데이 발표 자료 준비
