220707 앨버 계획완료

--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -23,7 +23,7 @@
 
 ## 7월 7일
 
-- [ ] 프로젝트 진행
-- [ ] 투표 결과 페이지 진행
-- [ ] 투표 진행 페이지 마감
-- [ ] 추가 공부 (typescript, css)
+- [x] 프로젝트 진행
+- [x] 투표 결과 페이지 진행
+- [x] 투표 진행 페이지 마감
+- [x] 추가 공부 (typescript, css)
