7월 7일 에덴 계획 완료

--- a/에덴/7월4일-7월10일.md
+++ b/에덴/7월4일-7월10일.md
@@ -22,7 +22,7 @@
 
 ## 7월 8일
 
-- [ ] 팀 회의
-- [ ] 몹 프로그래밍
-- [ ] 데모 발표 준비
-- [ ] jpa 강의 듣기
+- [x] 팀 회의
+- [x] 몹 프로그래밍
+- [x] 데모 발표 준비
+- [x] jpa 강의 듣기
