[티거] 7월 8일 계획

--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -29,3 +29,9 @@
   - [x] 일정 조회 기능 구현
   - [x] 메인 페이지 구현
   - [x] 데모 데이 발표 자료 준비
+
+## 7월 8일 (목)
+
+- [ ] 14시 1차 데모 데이
+- [ ] 17시 알록달록 회고
+- [ ] 알록달록 회식
