--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -27,3 +27,10 @@
 - [x] 투표 결과 페이지 진행
 - [x] 투표 진행 페이지 마감
 - [x] 추가 공부 (typescript, css)
+
+## 7월 8일
+
+- [ ] 데모데이 발표 준비
+- [ ] 투표 결과 페이지 마감
+- [ ] 모락 회고
+- [ ] 개인 회고
