--- a/앨버/7월4일~7월8일.md
+++ b/앨버/7월4일~7월8일.md
@@ -30,7 +30,7 @@
 
 ## 7월 8일
 
-- [ ] 데모데이 발표 준비
-- [ ] 투표 결과 페이지 마감
-- [ ] 모락 회고
-- [ ] 개인 회고
+- [x] 데모데이 발표 준비
+- [x] 투표 결과 페이지 마감
+- [x] 모락 회고
+- [x] 개인 회고
