[파랑] 7월 8일 계획 (#605)
* [파랑] 7월7일 계획

* [파랑] 7월7일 계획완료

* [파랑] 7월8일 계획

* [파랑] 7월8일 계획

* [파랑] 7월8일 계획완료

--- a/파랑/7월4일~7월11일.md
+++ b/파랑/7월4일~7월11일.md
@@ -25,3 +25,11 @@
 - [x] 15시 매고라
 - [x] 데모데이 발표 준비
 - [x] 22시 필라테스
+
+### 7월 8일 (금)
+- [x] JPA 강의
+- [x] 1차 스프린트 데모데이
+- [x] 알록달록 회식
+---
+1차 스프린트 데모데이 발표를 내가 맡았는데 별로 안 떨려서 그냥저냥 잘 마무리 했다ㅎㅎ. 다들 잘했다고 해줘서 뿌듯.
+끝나고 회식 했는데 3차까지 가놓고 아쉽다고 지금 게더에서 술마신다. 이 사람들 정신 나갔다.
