--- a/에덴/7월4일-7월10일.md
+++ b/에덴/7월4일-7월10일.md
@@ -20,9 +20,16 @@
 - [x] DataJpaTest 어노테이션 더 공부
 - [x] 운동
 
-## 7월 8일
+## 7월 7일
 
 - [x] 팀 회의
 - [x] 몹 프로그래밍
 - [x] 데모 발표 준비
 - [x] jpa 강의 듣기
+
+## 7월 8일
+
+- [x] 팀 회의
+- [x] jpa 수업 듣기
+- [x] 데모 데이
+- [ ] 회식때 술 적당히 마시기
