[티거] 7월 11일 계획

--- a/티거/7월4일-7월10일.md
+++ b/티거/7월4일-7월10일.md
@@ -23,15 +23,15 @@
   - [x] 일정 추가
   - [x] 일정 조회
 
-## 7월 7일 (수) - 01 🎂
+## 7월 7일 (목) - 01 🎂
 
 - [x] 알록달록 with 9️⃣
   - [x] 일정 조회 기능 구현
   - [x] 메인 페이지 구현
   - [x] 데모 데이 발표 자료 준비
 
-## 7월 8일 (목)
+## 7월 8일 (금)
 
-- [ ] 14시 1차 데모 데이
-- [ ] 17시 알록달록 회고
-- [ ] 알록달록 회식
+- [x] 14시 1차 데모 데이
+- [x] 17시 알록달록 회고
+- [x] 알록달록 회식
