feat: 코린 7월11일 계획

--- a/코린/7월11일-7월17일.md
+++ b/코린/7월11일-7월17일.md
@@ -1,7 +1,7 @@
 ## 7월11일
 
-- [x] 전체 회의
-- [x] 백엔드 회의
-- [x] 배포팀 회의
-- [x] 로컬에서 젠킨스 공부
-- [x] 오늘의 개발일지 작성
+- [ ] 전체 회의
+- [ ] 백엔드 회의
+- [ ] 배포팀 회의
+- [ ] 로컬에서 젠킨스 공부
+- [ ] 오늘의 개발일지 작성
