[티거] 7월 11일 완료

--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -2,6 +2,12 @@
 
 ## 7월 11일 (월)
 
-- [ ] 13시 스프린트 회의
-- [ ] (... 스프린트 회의 결론에 따라 계획 구체화 ...)
-- [ ] 18시 데일리플래너 회의
+- [x] 13시 스프린트 회의
+- [x] 디자인
+  - [x] 사이드 바
+  - [x] 내비게이션 바
+  - [x] 달력 페이지
+  - [x] 카테고리
+  - [x] 로그인 페이지
+  - [x] 마이 페이지
+- [x] 18시 데일리플래너 회의
