220711 앨버 계획 완료

--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -1,10 +1,10 @@
 ## 7월 11일
 
-- [ ] 프로젝트 회의
+- [x] 프로젝트 회의
   - 일정 산정
-- [ ] 분업/협업 결정
-- [ ] 투표 기능 구현
-- [ ] 투표 기능 리팩토링
-- [ ] 회원 및 그룹 기능 피그마
-- [ ] 근로 회의 (15:00~16:00, 20:00 ~ 21:00)
-- [ ] react, js 공부
+- [x] 분업/협업 결정
+- [x] 투표 기능 구현
+- [x] 투표 기능 리팩토링
+- [x] 회원 및 그룹 기능 피그마 - 일정이 아니어서 삭제
+- [x] 근로 회의 (15:00~16:00, 20:00 ~ 21:00)
+- [x] react, js 공부
