[파랑] 7월11일 계획완료

--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -1,6 +1,10 @@
 ### 7월 11일 (월)
 - [x] 10시 필라테스
-- [ ] 알록달록 2차 스프린트 회의
-- [ ] 16시 근로 페어
-- [ ] 17시 근로 회의
-- [ ] 18시 근로 회식
+- [x] 알록달록 2차 스프린트 회의
+- [x] 16시 근로 페어
+- [x] 17시 근로 회의
+- [x] 18시 근로 회식
+---
+애쉬랑 근로 페어하러 갔다가 제이슨이랑 페어하고 왔다. 당황했지만 역시나 유익한 시간이었다. 
+처음으로 근로 회식도 했는데 프론트 크루들이 너무 재밌어서 즐거운 시간이었다ㅎㅎ. 근로때문에 바쁘지만 재밌어서 빨리 dsl 픽스쳐 구현 완성하고 싶다.
+오늘 알록달록 2차 스프린트도 시작했다. 카테고리 구현을 맡았는데 팀에서 혼자 개발하는 건 처음이라 긴장도 되고 기대도 된다. 내일도 열심히 달려~🏃‍
