--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -1,7 +1,8 @@
 # 7.11.
 
-- [ ] 데일리
-- [ ] 근로회의
-- [ ] 테코톡 편집 & 자막 작업 1
-- [ ] 테코톡 편집 & 자막 작업 2
-- [ ] 테코톡 발표 준비
+- [x] 데일리
+- [x] 근로회의
+- [x] 테코톡 편집 & 자막 작업 1
+- [x] 테코톡 편집 & 자막 작업 2
+- [x] 테코톡 발표 준비
+
