7월 12일 에덴 계획

--- a/에덴/7월11일-7월17일.md
+++ b/에덴/7월11일-7월17일.md
@@ -4,3 +4,10 @@
   - [x] 스프린트2 방향 잡기
 - [x] 근로 회의(3-4시, 8-9시)
 - [x] 페어 프로그래밍
+
+## 7월 12일
+
+- [ ] 팀 회의
+- [ ] 수업 듣기
+- [ ] 페어 프로그래밍
+  - [ ] CI/CD 알아보기
