[티거] 7월 12일 계획

--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -11,3 +11,11 @@
   - [x] 로그인 페이지
   - [x] 마이 페이지
 - [x] 18시 데일리플래너 회의
+
+## 7월 12일 (화)
+
+- [ ] 10시 30분 강의 < Git 브랜치 전략 실습 >
+- [ ] 스프린트 1 코드 리팩토링
+  - [ ] 예외 케이스 처리
+  - [ ] 라이브러리 도입
+- [ ] 알록달록 FE 회의
