--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -8,3 +8,13 @@
 - [x] 회원 및 그룹 기능 피그마 - 일정이 아니어서 삭제
 - [x] 근로 회의 (15:00~16:00, 20:00 ~ 21:00)
 - [x] react, js 공부
+
+
+## 7월 12일
+
+- [ ] radio, checkbox 컴포넌트 구현
+- [ ] 여러개 투표 기능 구현
+- [ ] 에러 핸들링
+- [ ] 투표 메인 페이지 구현
+- [ ] git issue 등록
+- [ ] react, js 공부
