[티거] 7월 12일 완료

--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -14,8 +14,9 @@
 
 ## 7월 12일 (화)
 
-- [ ] 10시 30분 강의 < Git 브랜치 전략 실습 >
-- [ ] 스프린트 1 코드 리팩토링
-  - [ ] 예외 케이스 처리
-  - [ ] 라이브러리 도입
-- [ ] 알록달록 FE 회의
+- [x] 10시 30분 강의 < Git 브랜치 전략 실습 >
+- [x] 스프린트 1 코드 리팩토링
+  - [x] css 단위 변경
+  - [x] type 분리
+  - [x] axios, react-query 도입
+- [x] 알록달록 FE 회의
