[티거] 7월 12일 계획 (#622)
아마 처음으로 수인분당선이 제시간에 왔다
덕분에 아침에 조금 더 여유롭게 올 수 있었다
제발 매일 제시간에 오고 제시간에 출발하면 좋겠다
내일은 처음으로 30분 늦게 등교하는 날~!
근~데 30분 늦게 출발하려나...? 는 모르겠다
내일부터는 무조건 무조건 여유롭게 다녀야지

어제 치맥 고? 고??? 얘기하다가 진짜로 밤늦게 나인 마르코 빅터 우연 준찌 후이랑 치맥하러 갔다
남은 프론트엔드 크루들 대부분이랑 갔는데 어쩌다 보니 다 레벨 1 포코조였다
사석에서 처음 보는 크루들이 대부분이어서 더 좋았다 (말코 후이랑 말 놓음!)
접점 없는 크루들이랑도 다 얼른 가까워지고 싶다
엄청 늦게 자서 못 일어날까 걱정하느라... 제대로 못 잤다
오전에 숙취가 올라올 때쯤 짜장면에 탕수육으로 치유했다 호호
외식 조아

구구의 깃 브랜치 전략 특강이 있었다
커밋 간 rebase는 익숙했지만 브랜치 간 rebase는 익숙하지 않았는데 오늘을 계기로 조금은 익숙해졌다
이전까지는 냅다 pull을 사용했었는데 rebase! 좋다!
커밋 기록이 조금 더 깔끔하게 남는다

예상치 못한 특강으로 개발을 계획했던 것보다 못했다
react-query...! 처음 써봤는데 아주 아주 편리하고 좋다
아무튼 내일도 나인이랑 달려야지
아마 찢어지기 전 마지막으로 하는 페어 프로그래밍이 아닐까~ 생각한다

--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -11,3 +11,12 @@
   - [x] 로그인 페이지
   - [x] 마이 페이지
 - [x] 18시 데일리플래너 회의
+
+## 7월 12일 (화)
+
+- [x] 10시 30분 강의 < Git 브랜치 전략 실습 >
+- [x] 스프린트 1 코드 리팩토링
+  - [x] css 단위 변경
+  - [x] type 분리
+  - [x] axios, react-query 도입
+- [x] 알록달록 FE 회의
