--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -8,9 +8,9 @@
 
 # 7.12.
 
-- [ ] 데일리 회의
-- [ ] 데일리 회고
-- [ ] 인증/인가 관련 학습
-- [ ] 인증/인가 UX 레퍼런스 찾아보기
-- [ ] 테코톡 발표 준비
+- [x] 데일리 회의
+- [x] 데일리 회고
+- [x] 인증/인가 관련 학습
+- [x] 인증/인가 UX 레퍼런스 찾아보기
+- [x] 테코톡 발표 준비
 
