[민초] 7월 12일 계획 (#618)
* [민초] 7월 12일 계획

* 완료

--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -6,3 +6,11 @@
 - [x] 테코톡 편집 & 자막 작업 2
 - [x] 테코톡 발표 준비
 
+# 7.12.
+
+- [x] 데일리 회의
+- [x] 데일리 회고
+- [x] 인증/인가 관련 학습
+- [x] 인증/인가 UX 레퍼런스 찾아보기
+- [x] 테코톡 발표 준비
+
