--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -10,8 +10,8 @@
 오늘 알록달록 2차 스프린트도 시작했다. 카테고리 구현을 맡았는데 팀에서 혼자 개발하는 건 처음이라 긴장도 되고 기대도 된다. 내일도 열심히 달려~🏃‍
 
 ### 7월 12일 (화)
-- [ ] 카테고리 기능 구현
-  - [ ] 설계
-  - [ ] 카테고리 생성
-- [ ] 19시 근로 페어
--  [ ] recruitment dsl
+- [x] 카테고리 기능 구현
+  - [x] 설계
+  - [x] 카테고리 생성
+- [x] 19시 근로 페어
+-  [x] recruitment dsl
