--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -8,3 +8,10 @@
 애쉬랑 근로 페어하러 갔다가 제이슨이랑 페어하고 왔다. 당황했지만 역시나 유익한 시간이었다. 
 처음으로 근로 회식도 했는데 프론트 크루들이 너무 재밌어서 즐거운 시간이었다ㅎㅎ. 근로때문에 바쁘지만 재밌어서 빨리 dsl 픽스쳐 구현 완성하고 싶다.
 오늘 알록달록 2차 스프린트도 시작했다. 카테고리 구현을 맡았는데 팀에서 혼자 개발하는 건 처음이라 긴장도 되고 기대도 된다. 내일도 열심히 달려~🏃‍
+
+### 7월 12일 (화)
+- [x] 카테고리 기능 구현
+  - [x] 설계
+  - [x] 카테고리 생성
+- [x] 19시 근로 페어
+-  [x] recruitment dsl
