220713 앨버 계획완료

--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -12,9 +12,9 @@
 
 ## 7월 12일
 
-- [ ] radio, checkbox 컴포넌트 구현
-- [ ] 여러개 투표 기능 구현
-- [ ] 에러 핸들링
-- [ ] 투표 메인 페이지 구현
-- [ ] git issue 등록
-- [ ] react, js 공부
+- [x] radio, checkbox 컴포넌트 구현
+- [x] 여러개 투표 기능 구현
+- [x] 에러 핸들링
+- [x] 투표 메인 페이지 구현 이어서
+- [x] git issue 등록
+- [x] react, js 공부
