[앨버] 7월 12일 계획 (#626)
* 220712 앨버 계획

* 220713 앨버 계획완료

--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -8,3 +8,13 @@
 - [x] 회원 및 그룹 기능 피그마 - 일정이 아니어서 삭제
 - [x] 근로 회의 (15:00~16:00, 20:00 ~ 21:00)
 - [x] react, js 공부
+
+
+## 7월 12일
+
+- [x] radio, checkbox 컴포넌트 구현
+- [x] 여러개 투표 기능 구현
+- [x] 에러 핸들링
+- [x] 투표 메인 페이지 구현 이어서
+- [x] git issue 등록
+- [x] react, js 공부
