--- a/에덴/7월11일-7월17일.md
+++ b/에덴/7월11일-7월17일.md
@@ -7,7 +7,7 @@
 
 ## 7월 12일
 
-- [ ] 팀 회의
-- [ ] 수업 듣기
-- [ ] 페어 프로그래밍
-  - [ ] CI/CD 알아보기
+- [x] 팀 회의
+- [x] 수업 듣기
+- [x] 페어 프로그래밍
+  - [x] CI/CD 알아보기
