--- a/잉/7월11일~7월17일.md
+++ b/잉/7월11일~7월17일.md
@@ -4,7 +4,7 @@
 - [x] JPA책 5장 읽기
 
 ### 7월 12일 (화)
-- [ ] 티타임 개발
-- [ ] 프롤로그 회의
-- [ ] JPA책 4장 읽기
-- [ ] CI/CD 테코블 읽기
+- [x] 티타임 개발
+- [x] 프롤로그 회의
+- [x] JPA책 4장 읽기
+- [x] CI/CD 테코블 읽기
