[파랑] 7월13일 계획

--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -15,3 +15,11 @@
   - [x] 카테고리 생성
 - [x] 19시 근로 페어
 -  [x] recruitment dsl
+
+### 7월 13일 (수)
+- [x] 특강
+- [ ] 카테고리 등록 기능 구현
+  - [ ] 인수테스트 구현
+  - [ ] entity 구현
+- [ ] 근로 설계 고민 해결
+- [ ] 테코톡 준비
