--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -18,8 +18,8 @@
 
 ### 7월 13일 (수)
 - [x] 특강
-- [ ] 카테고리 등록 기능 구현
-  - [ ] 인수테스트 구현
-  - [ ] entity 구현
-- [ ] 근로 설계 고민 해결
-- [ ] 테코톡 준비
+- [x] 카테고리 등록 기능 구현
+  - [x] 인수테스트 구현
+  - [x] entity 구현
+- [x] 근로 설계 고민 해결
+- [x] 테코톡 준비
