feat: 7월13일 계획 완료

--- a/코린/7월11일-7월17일.md
+++ b/코린/7월11일-7월17일.md
@@ -14,7 +14,7 @@
 
 ## 7월12일
 
-- [ ] 팀회의
-- [ ] jenkins server 가상 메모리 땡기기
-- [ ] jenkins server에서 project build 성공시키기
-- [ ] 오늘의 개발일지 작성
+- [x] 팀회의
+- [x] jenkins server 가상 메모리 땡기기
+- [x] jenkins server에서 project build 성공시키기
+- [x] 오늘의 개발일지 작성
