--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -18,3 +18,10 @@
 - [x] 투표 메인 페이지 구현 이어서
 - [x] git issue 등록
 - [x] react, js 공부
+
+
+## 7월 13일
+
+- [x] radio, checkbox css.....
+- [x] 특강
+- [x] 코드 리뷰
