7월 13일 에덴 계획 완료

--- a/에덴/7월11일-7월17일.md
+++ b/에덴/7월11일-7월17일.md
@@ -15,7 +15,7 @@
 
 ## 7월 13일
 
-- [ ] 팀 회의
-- [ ] 특강 듣기
-- [ ] 페어 프로그래밍
-  - [ ] CI/CD 최대한 구현
+- [X] 팀 회의
+- [X] 특강 듣기
+- [X] 페어 프로그래밍
+  - [x] CI/CD 최대한 구현
