[티거] 7월 13일 완료

--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -23,7 +23,7 @@
 
 ## 7월 13일 (수)
 
-- [ ] 10시 30분 특강 < 신입 개발자에게 필요한 역량과 개발자의 성장 >
-- [ ] 스프린트 1 코드 리팩토링 with 9️⃣
-  - [ ] 전역 상태 라이브러리 도입
-  - [ ] 예외 케이스 처리
+- [x] 10시 30분 특강 < 신입 개발자에게 필요한 역량과 개발자의 성장 >
+- [x] 스프린트 1 코드 리팩토링 with 9️⃣
+  - [x] react-query mutation 수정
+  - [x] 종일 일정 등록
