[오리] 7월 13일 계획 완료

--- a/오리/7월11일~7월17일.md
+++ b/오리/7월11일~7월17일.md
@@ -10,7 +10,7 @@
 - [x] jpa 스터디
 
 ### 7월 13일(수)
-- [ ] 오전 강의
-- [ ] 2차 스프린트 기능 리스트 분할
-- [ ] sonar cloud 적용
-- [ ] sonar cloud 글쓰기
+- [x] 오전 강의
+- [x] 2차 스프린트 기능 리스트 분할
+- [x] sonar cloud 적용
+- [x] sonar cloud 글쓰기
