--- a/오리/7월11일~7월17일.md
+++ b/오리/7월11일~7월17일.md
@@ -8,3 +8,9 @@
 - [x] 오전 git 강의
 - [x] 스프린트1 리팩터링
 - [x] jpa 스터디
+
+### 7월 13일(수)
+- [x] 오전 강의
+- [x] 2차 스프린트 기능 리스트 분할
+- [x] sonar cloud 적용
+- [x] sonar cloud 글쓰기
