--- a/잉/7월11일~7월17일.md
+++ b/잉/7월11일~7월17일.md
@@ -8,3 +8,9 @@
 - [x] 프롤로그 회의
 - [x] JPA책 4장 읽기
 - [x] CI/CD 테코블 읽기
+
+### 7월 13일 (수)
+- [x] 티타임 개발
+- [x] 프롤로그 회의
+- [x] JPA책 6장 읽기
+- [x] JPA 미션 2단계
