--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -16,8 +16,8 @@
 
 # 7.13.
 
-- [ ] 데일리 회의
-- [ ] 데일리 회고
-- [ ] 프론트엔드 AWS 배포
-- [ ] 회원가입 UI
+- [x] 데일리 회의
+- [x] 데일리 회고
+- [x] 프론트엔드 AWS 배포
+- [x] 회원가입 UI
 
