--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -21,3 +21,9 @@
 - [x] 프론트엔드 AWS 배포
 - [x] 회원가입 UI
 
+# 7.14.
+
+- [ ]  오전 : Stepper 컴포넌트 구현
+- [ ] 오후 : 메인 페이지 리뷰에 회원정보 추가
+- [ ] 저녁 : Dropdown 컴포넌트 구현
+- [ ] 저녁 : 연차/직군 선택 페이지 구현
