7월 14일 에덴 계획

--- a/에덴/7월11일-7월17일.md
+++ b/에덴/7월11일-7월17일.md
@@ -19,3 +19,11 @@
 - [X] 특강 듣기
 - [X] 페어 프로그래밍
   - [x] CI/CD 최대한 구현
+
+## 7월 14일
+
+- [ ] 팀 회의
+- [ ] 3인 페어 프로그래밍
+  - [ ] 기능 구현하기
+- [ ] JPA 스터디
+- [ ] 운동
