--- a/티거/7월11일-7월17일.md
+++ b/티거/7월11일-7월17일.md
@@ -27,3 +27,10 @@
 - [x] 스프린트 1 코드 리팩토링 with 9️⃣
   - [x] react-query mutation 수정
   - [x] 종일 일정 등록
+
+## 7월 14일 (목)
+
+- [ ] import prettier 설정
+- [ ] 모달 컴포넌트 구현
+  - [ ] 로그인
+  - [ ] 카테고리 생성
