[파랑] 7월14일 계획완료

--- a/파랑/7월11일~7월17일.md
+++ b/파랑/7월11일~7월17일.md
@@ -25,7 +25,7 @@
 - [x] 테코톡 준비
 
 ### 7월 14일 (목)
-- [ ] 카테고리 전체 목록 조회 기능 구현
-- [ ] JPA auditing 적용
-- [ ] JPA 스터디
-- [ ] 21시 필라테스
+- [x] 카테고리 전체 목록 조회 기능 구현
+- [x] JPA auditing 적용
+- [x] JPA 스터디
+- [x] 21시 필라테스
