--- a/에덴/7월11일-7월17일.md
+++ b/에덴/7월11일-7월17일.md
@@ -22,8 +22,8 @@
 
 ## 7월 14일
 
-- [ ] 팀 회의
-- [ ] 3인 페어 프로그래밍
-  - [ ] 기능 구현하기
-- [ ] JPA 스터디
-- [ ] 운동
+- [x] 팀 회의
+- [x] 3인 페어 프로그래밍
+  - [x] 기능 구현하기
+- [x] JPA 스터디
+- [x] 운동
