[민초] 7월 15일 계획

--- a/민초/7월11일-7월15일.md
+++ b/민초/7월11일-7월15일.md
@@ -27,3 +27,9 @@
 - [x] 오후 : 메인 페이지 리뷰에 상품정보 추가
 - [x] 저녁 : Dropdown 컴포넌트 구현
 - [x] 저녁 : 연차/직군 선택 페이지 구현
+
+# 7.15.
+
+- [ ] 인증/인가 flow 학습
+- [ ] OAuth 로그인 기능 구현
+- [ ] 로그인과 추가 입력 페이지를 연계
