220715 앨버 계획완료

--- a/앨버/7월11일~7월15일.md
+++ b/앨버/7월11일~7월15일.md
@@ -28,7 +28,7 @@
 
 ## 7월 14일
 
-- [ ] FE/BE 관통 협업 시작 (투표 or 그룹) 
-- [ ] 데일리 회의
-- [ ] 잔업...
-- [ ] git 공부..
+- [x] FE/BE 관통 협업 시작 (투표 or 그룹) 
+- [x] 데일리 회의
+- [x] 잔업...
+- [x] git 공부..
